Convert all HTML files from ISO to UTF-8.

--- a/ANDROUNDDA.HTML
+++ b/ANDROUNDDA.HTML
@@ -38,7 +38,7 @@ td {vertical-align:center; overflow:hidden; }
 	<td width="327" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center" style="margin-right: 10px;"><font size="3" face="Arial">
 
-Androsace villosa v. jaquemontii aus Nepal blüht schon im April und bildet anschliessend 
+Androsace villosa v. jaquemontii aus Nepal blÃ¼ht schon im April und bildet anschliessend 
 viele Tochterrosetten.
  </font></p></td>
         </tr>
@@ -47,9 +47,9 @@ viele Tochterrosetten.
  <tbody><tr>
         <td width="316" height="200" bgcolor="#44aa00" valign="middle">
          <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
-		Androsace lanuginosa v. leichtlinii blüht dagegen bis in den Oktober
-		; hier zusammen mit Sedum ewersii gepflanzt, um die Lücken zwischen den
-		 auseinanderstrebenden Trieben zu füllen.
+		Androsace lanuginosa v. leichtlinii blÃ¼ht dagegen bis in den Oktober
+		; hier zusammen mit Sedum ewersii gepflanzt, um die LÃ¼cken zwischen den
+		 auseinanderstrebenden Trieben zu fÃ¼llen.
 		</font></p></td>
 	<td width="184" height="200" bgcolor="#44aa00" valign="middle">
           <p align="left" style="margin-right: 10px;">
@@ -67,7 +67,7 @@ viele Tochterrosetten.
           <p align="center" style="margin-right: 10px;"><font size="3" face="Arial">
 
 Androsace barbulata ist einer der kleinsten asiatischen Mannsschilde. Er wird nur 2cm hoch, 
-die Blüte setzt schon Mitte April ein. Der Zuwachs ist sehr zögerlich. Solche Pflanzen sind 
+die BlÃ¼te setzt schon Mitte April ein. Der Zuwachs ist sehr zÃ¶gerlich. Solche Pflanzen sind 
 eigentlich nur im Trog oder einem Spezialbeet zu halten.
  </font></p></td>
         </tr>
@@ -80,9 +80,9 @@ eigentlich nur im Trog oder einem Spezialbeet zu halten.
 		</p></td>
 	<td width="250" height="200" bgcolor="#44aa00" valign="middle">
          <p align="center"><font size="2" face="Arial">
-Androsace sempervivoides (links) kommt ebenfalls aus dem Himalaja, ist recht wüchsig und 
-blüht im April reich über kleinen grünen Rosetten. Androsace sarmentosa (rechts) wird etwas größer 
-und hat besonders im Winter schöne silbrige Rosetten. </font></p></td>
+Androsace sempervivoides (links) kommt ebenfalls aus dem Himalaja, ist recht wÃ¼chsig und 
+blÃ¼ht im April reich Ã¼ber kleinen grÃ¼nen Rosetten. Androsace sarmentosa (rechts) wird etwas grÃ¶ÃŸer 
+und hat besonders im Winter schÃ¶ne silbrige Rosetten. </font></p></td>
 	<td width="179" height="200" bgcolor="#44aa00" valign="middle">
  	 <p align="left" style="margin-right: 10px;">
 		<img src="Androsace-sarmentosa.JPG" width="220" height="178" align="right">
@@ -93,9 +93,9 @@ und hat besonders im Winter schöne silbrige Rosetten. </font></p></td>
  <tbody><tr>
         <td width="316" height="200" bgcolor="#44aa00" valign="middle">
          <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
-		Androsace bulleyana (Syn.And. coccinea) aus Westchina trägt eine auffallend 
-		ziegelrote Blütendolde auf einem etwa 20cm hohen Stiel. Da die Pflanzen nach 
-		der Blüte absterben, muss immer wieder aus Samen nachgezogen werden.               
+		Androsace bulleyana (Syn.And. coccinea) aus Westchina trÃ¤gt eine auffallend 
+		ziegelrote BlÃ¼tendolde auf einem etwa 20cm hohen Stiel. Da die Pflanzen nach 
+		der BlÃ¼te absterben, muss immer wieder aus Samen nachgezogen werden.               
 		</font></p></td>
 	<td width="184" height="200" bgcolor="#44aa00" valign="middle">
           <p align="left" style="margin-right: 10px;">
@@ -127,9 +127,9 @@ Auch die anderen Arten aus den Alpen sind schwierig.
 		</p></td>
 	        <td width="350" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center"><font size="2" face="Arial">
-Der auch in Süddeutschland heimische Rosmarinseidelbast Daphne cneorum bildet im April/Mai üppig 
-blühende Büsche. Leider sind die Wurzeln sehr pilzanfällig. Ich pfropfe deshalb auf Daphne 
-tangutica, was aber auch nicht 100%ig schützt. </font></p></td>
+Der auch in SÃ¼ddeutschland heimische Rosmarinseidelbast Daphne cneorum bildet im April/Mai Ã¼ppig 
+blÃ¼hende BÃ¼sche. Leider sind die Wurzeln sehr pilzanfÃ¤llig. Ich pfropfe deshalb auf Daphne 
+tangutica, was aber auch nicht 100%ig schÃ¼tzt. </font></p></td>
 	<td width="195" height="200" bgcolor="#44aa00" valign="middle">
           <p align="left" style="margin-right: 10px;">
 		   
@@ -156,8 +156,8 @@ Kalk und Humus besteht. </font></p></td>
 		</p></td>
 	<td width="267" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center" style="margin-right: 10px;"><font size="3" face="Arial">
-Daphne tangutica bildet große Büsche von 1m Durchmesser, die im April und September blühen und viele
-rote Beeren tragen. Starker Duft! Auf dem Foto die Nachblüte im Herbst. Die Aussaat ist relativ erfolgreich.		 
+Daphne tangutica bildet groÃŸe BÃ¼sche von 1m Durchmesser, die im April und September blÃ¼hen und viele
+rote Beeren tragen. Starker Duft! Auf dem Foto die NachblÃ¼te im Herbst. Die Aussaat ist relativ erfolgreich.		 
  </font></p></td>
         </tr>
 </tbody></table>
@@ -166,8 +166,8 @@ rote Beeren tragen. Starker Duft! Auf dem Foto die Nachblüte im Herbst. Die Auss
  <tbody><tr>
        <td width="328" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
-Daphne blagayana kommt von der Steiermark bis nach Bulgarien in kalkreichen Humusböden vor. 
-Die stark duftende Königsblume Siebenbürgens benötigt etwas Schatten. Die Pflege ist schwierig, Samen 
+Daphne blagayana kommt von der Steiermark bis nach Bulgarien in kalkreichen HumusbÃ¶den vor. 
+Die stark duftende KÃ¶nigsblume SiebenbÃ¼rgens benÃ¶tigt etwas Schatten. Die Pflege ist schwierig, Samen 
 werden in Kultur nicht angesetzt, gepfropfte Pflanzen gingen mir immer nach kurzer Zeit wieder ein.
 Ich probiere es weiter! </font>
           </p></td>
@@ -186,8 +186,8 @@ Ich probiere es weiter! </font>
 		</p></td>
 	<td width="267" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center" style="margin-right: 10px;"><font size="3" face="Arial">
-Daphne sericea kommt von Süditalien über Griechenland bis zur Türkei vor, ist aber auch bei uns hart.
-Kann über 1m groß werden.		 
+Daphne sericea kommt von SÃ¼ditalien Ã¼ber Griechenland bis zur TÃ¼rkei vor, ist aber auch bei uns hart.
+Kann Ã¼ber 1m groÃŸ werden.		 
  </font></p></td>
         </tr>
 </tbody></table>
@@ -196,8 +196,8 @@ Kann über 1m groß werden.
  <tbody><tr>
        <td width="328" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
-Daphne laureola ist über weite Teile Europas verbreitet. Die gelbgrünen Blüten erscheinen 
-schon Ende Januar und duften nach Honig. Schatten und Kalkboden werden bevorug,. die Winterhärte ist nicht die beste.
+Daphne laureola ist Ã¼ber weite Teile Europas verbreitet. Die gelbgrÃ¼nen BlÃ¼ten erscheinen 
+schon Ende Januar und duften nach Honig. Schatten und Kalkboden werden bevorug,. die WinterhÃ¤rte ist nicht die beste.
  </font></p></td>
 	<td width="172" height="200" bgcolor="#44aa00" valign="middle">
           <p align="left" style="margin-right: 10px;"><font size="5" face="Arial">
@@ -213,7 +213,7 @@ schon Ende Januar und duften nach Honig. Schatten und Kalkboden werden bevorug,.
 		</p></td>
 	<td width="267" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center" style="margin-right: 10px;"><font size="3" face="Arial">
-Daphne collina x cneorum ist eine sehr wüchsige Kreuzung. Für meinen Geschmack könnte sie etwas üppiger blühen.		 
+Daphne collina x cneorum ist eine sehr wÃ¼chsige Kreuzung. FÃ¼r meinen Geschmack kÃ¶nnte sie etwas Ã¼ppiger blÃ¼hen.		 
  </font></p></td>
         </tr>
 </tbody></table>
@@ -221,7 +221,7 @@ Daphne collina x cneorum ist eine sehr wüchsige Kreuzung. Für meinen Geschmack k
  <tbody><tr>
        <td width="328" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
-Daphne x  hendersonii  Èrnst Hauser´, eine Naturhybride vom Gardasee aus D. petraea und D. cneorum mit schmalen dunklen Blättern
+Daphne x  hendersonii  Ãˆrnst HauserÂ´, eine Naturhybride vom Gardasee aus D. petraea und D. cneorum mit schmalen dunklen BlÃ¤ttern
  </font></p></td>
 	<td width="172" height="200" bgcolor="#44aa00" valign="middle">
           <p align="left" style="margin-right: 10px;"><font size="5" face="Arial">
@@ -237,5 +237,5 @@ Daphne x  hendersonii  Èrnst Hauser´, eine Naturhybride vom Gardasee aus D. petr
 
         </tr>
  </tbody></table>
-</p><p><a href="index.html">zurück zur Startseite</a> <a href="Fotostartseiteneu.html">zurück zur Fotoübersicht</a>
+</p><p><a href="index.html">zurÃ¼ck zur Startseite</a> <a href="Fotostartseiteneu.html">zurÃ¼ck zur FotoÃ¼bersicht</a>
 </p></div></body></html>
