--- a/Kalthauspflanzen.html
+++ b/Kalthauspflanzen.html
@@ -36,10 +36,10 @@ td {vertical-align:center; overflow:hidden; }
 		</td>
 	<td width="327" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center" style="margin-right: 10px;"><font size="3" face="Arial">
-Asarina (Maurandya) scandens ist eine überreich blühende Kletterpflanze, die frostfrei überwintert auch
- mehrjährig ist.Neuerdings heißt sie Maurandya scandens. An einer entsprechenden Kletterhilfe
- bringt sie es im Laufe des Sommers auf über 2 Meter Höhe. Milde Winter  hat sie 
- sogar im Freien überlebt.
+Asarina (Maurandya) scandens ist eine Ã¼berreich blÃ¼hende Kletterpflanze, die frostfrei Ã¼berwintert auch
+ mehrjÃ¤hrig ist.Neuerdings heiÃŸt sie Maurandya scandens. An einer entsprechenden Kletterhilfe
+ bringt sie es im Laufe des Sommers auf Ã¼ber 2 Meter HÃ¶he. Milde Winter  hat sie 
+ sogar im Freien Ã¼berlebt.
  </font></p></td>
         </tr>
  </tbody></table>
@@ -47,7 +47,7 @@ Asarina (Maurandya) scandens ist eine überreich blühende Kletterpflanze, die fro
  <tbody><tr>
         <td width="316" height="200" bgcolor="#44aa00" valign="middle">
          <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
-		Asarina `Blue Sky´ist eine dankbare Kübelpflanze, die den ganzen Sommer über blüht. Unterschiede zur Art konnte ich beim besten Willen nicht feststellen. Die Farbe ist hier etwas zu wenig violett wiedergegeben.
+		Asarina `Blue SkyÂ´ist eine dankbare KÃ¼belpflanze, die den ganzen Sommer Ã¼ber blÃ¼ht. Unterschiede zur Art konnte ich beim besten Willen nicht feststellen. Die Farbe ist hier etwas zu wenig violett wiedergegeben.
 		</font></p></td>
 	<td width="184" height="200" bgcolor="#44aa00" valign="middle">
           <p align="left" style="margin-right: 10px;">
@@ -63,7 +63,7 @@ Asarina (Maurandya) scandens ist eine überreich blühende Kletterpflanze, die fro
 		</p></td>
 	<td width="250" height="200" bgcolor="#44aa00" valign="middle">
          <p align="center"><font size="2" face="Arial">
-Asarina erubescens (neuerdings Lophospermum erubescens genannt) ist eine 4m hohe auch mehrjährige Pflanze für das Kalthaus (im Sommer auch draußen im Kübel oder ausgepflanzt), die von Frühjahr bis Herbst ihre großen Blüten zeigt. Es gibt auch eine weiße Form. Ich ziehe eine Pflanze zusammen mit einer Kletterrose am Gerüst. </font></p></td>
+Asarina erubescens (neuerdings Lophospermum erubescens genannt) ist eine 4m hohe auch mehrjÃ¤hrige Pflanze fÃ¼r das Kalthaus (im Sommer auch drauÃŸen im KÃ¼bel oder ausgepflanzt), die von FrÃ¼hjahr bis Herbst ihre groÃŸen BlÃ¼ten zeigt. Es gibt auch eine weiÃŸe Form. Ich ziehe eine Pflanze zusammen mit einer Kletterrose am GerÃ¼st. </font></p></td>
 	<td width="149" height="210" bgcolor="#44aa00" valign="middle">
  	 <p align="left" style="margin-right: 10px;">
 		
@@ -78,12 +78,12 @@ Asarina erubescens (neuerdings Lophospermum erubescens genannt) ist eine 4m hohe
 		</p></td>
 	        <td width="250" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center"><font size="2" face="Arial">
-Rhodohypoxis baurii (kl. weiße Blüte im rechten Bild)ist die Naturform aus den
-südafrikanischen Drakensbergen. Die rote Blüte ist die Hybride `Tetra
-Red´,die rosa Blüte ist `Garnet Batfield´, und die große weiße Blüte
-mit rotem Auge ist `Picta´, alle hier in ein Pflanzenpolster gesteckt.
-Aus England und Japan kommen etliche Züchtungen in verschiedenen Rosa-
-und Rottönen.Neuerdings werden sogar Samentüten angeboten. Links nochmal die Sorte Tetra Red.
+Rhodohypoxis baurii (kl. weiÃŸe BlÃ¼te im rechten Bild)ist die Naturform aus den
+sÃ¼dafrikanischen Drakensbergen. Die rote BlÃ¼te ist die Hybride `Tetra
+RedÂ´,die rosa BlÃ¼te ist `Garnet BatfieldÂ´, und die groÃŸe weiÃŸe BlÃ¼te
+mit rotem Auge ist `PictaÂ´, alle hier in ein Pflanzenpolster gesteckt.
+Aus England und Japan kommen etliche ZÃ¼chtungen in verschiedenen Rosa-
+und RottÃ¶nen.Neuerdings werden sogar SamentÃ¼ten angeboten. Links nochmal die Sorte Tetra Red.
  </font></p></td>
 	<td width="175" height="180" bgcolor="#44aa00" valign="middle">
           <p align="left" style="margin-right: 10px;">
@@ -97,9 +97,9 @@ und Rottönen.Neuerdings werden sogar Samentüten angeboten. Links nochmal die Sor
        <td width="300" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
 Canarina canariensis, die kanarische Glockenblume, hier in ihrer gelben
-Form aus Teneriffa und der rötlichen Form mit länglicher Blüte aus La Gomera. Eine im Winter
-prächtig blühende Kalthauspflanze, die allerdings Platz braucht, da sie bis zu 4m Höhe 
-erreicht und bis zu 1m lange Rübenwurzeln bildet. </font></p></td>
+Form aus Teneriffa und der rÃ¶tlichen Form mit lÃ¤nglicher BlÃ¼te aus La Gomera. Eine im Winter
+prÃ¤chtig blÃ¼hende Kalthauspflanze, die allerdings Platz braucht, da sie bis zu 4m HÃ¶he 
+erreicht und bis zu 1m lange RÃ¼benwurzeln bildet. </font></p></td>
 	<td width="329" height="200" bgcolor="#44aa00" valign="middle"> 
          <p align="left" style="margin-right: 10px;">
 		<img src="Canarina-canariensis.JPG" width="263" height="164" align="right"> 
@@ -111,8 +111,8 @@ erreicht und bis zu 1m lange Rübenwurzeln bildet. </font></p></td>
        <td width="300" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
 
-Hier eine Kreuzung aus den beiden Pflanzen. Die Blüte ist deutlich verbessert, da sie
-runder geworden ist und ein leuchtendes Orange zeigt. Die Blütenblätter sind nach außen umgebogen.
+Hier eine Kreuzung aus den beiden Pflanzen. Die BlÃ¼te ist deutlich verbessert, da sie
+runder geworden ist und ein leuchtendes Orange zeigt. Die BlÃ¼tenblÃ¤tter sind nach auÃŸen umgebogen.
  Die Farbe variiert von Pflanze zu Pflanze von Rot bis Gelb. </font></p></td>
 	<td width="329" height="200" bgcolor="#44aa00" valign="middle"> 
          <p align="left" style="margin-right: 10px;">
@@ -125,8 +125,8 @@ runder geworden ist und ein leuchtendes Orange zeigt. Die Blütenblätter sind nac
        <td width="300" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
 
-Diese ganz dunkel blühende Pflanze fand ich bei meinem letzten Besuch auf Teneriffa
-in der Nähe von Chinamada im Anagagebirge. </font></p></td>
+Diese ganz dunkel blÃ¼hende Pflanze fand ich bei meinem letzten Besuch auf Teneriffa
+in der NÃ¤he von Chinamada im Anagagebirge. </font></p></td>
 	<td width="329" height="200" bgcolor="#44aa00" valign="middle"> 
          <p align="left" style="margin-right: 10px;">
 		<img src="Canarinadunkel.jpg" width="263" height="261" align="right"> 
@@ -141,12 +141,12 @@ in der Nähe von Chinamada im Anagagebirge. </font></p></td>
 		</p></td>
 	<td width="267" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center" style="margin-right: 10px;"><font size="3" face="Arial">
-Convolvulus cneorum hat zwar Blüten wie unsere in Gärten gefürchtete Ackerwinde,
-		  ist aber ein ca. 50cm hoher Strauch mit ganzjährig silbergrünen Blättern, 
-		  die allein schon sehr zierend wirken. Die rosa Knospen und die weißen Blüten 
-		  mit gelbem Schlund, die von April an über lange Zeit erscheinen, sind ein Blickfang auf jeder Terrasse. 
-		  In Südengland ist er winterhart, bei uns besser als Kübelpflanze zu behandeln, in milden Wintern
-		  aber auch hier hart. Gelegentlich sterben Pflanzen ohne für mich ersichtlichen Grund ab.
+Convolvulus cneorum hat zwar BlÃ¼ten wie unsere in GÃ¤rten gefÃ¼rchtete Ackerwinde,
+		  ist aber ein ca. 50cm hoher Strauch mit ganzjÃ¤hrig silbergrÃ¼nen BlÃ¤ttern, 
+		  die allein schon sehr zierend wirken. Die rosa Knospen und die weiÃŸen BlÃ¼ten 
+		  mit gelbem Schlund, die von April an Ã¼ber lange Zeit erscheinen, sind ein Blickfang auf jeder Terrasse. 
+		  In SÃ¼dengland ist er winterhart, bei uns besser als KÃ¼belpflanze zu behandeln, in milden Wintern
+		  aber auch hier hart. Gelegentlich sterben Pflanzen ohne fÃ¼r mich ersichtlichen Grund ab.
 		 
 		 </font></p></td>
         </tr>
@@ -156,8 +156,8 @@ Convolvulus cneorum hat zwar Blüten wie unsere in Gärten gefürchtete Ackerwinde,
  <tbody><tr>
        <td width="328" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
-Fremontodendron californicum, ein bis zu 6m hoher Baum oder Strauch von der Halbinsel Baja California blüht schon im April und 
-weniger üppig nochmal im Herbst. In Südengland ist er winterhart, bei uns muß er als Kübelpflanze gezogen werden.
+Fremontodendron californicum, ein bis zu 6m hoher Baum oder Strauch von der Halbinsel Baja California blÃ¼ht schon im April und 
+weniger Ã¼ppig nochmal im Herbst. In SÃ¼dengland ist er winterhart, bei uns muÃŸ er als KÃ¼belpflanze gezogen werden.
  </font>
           </p></td>
 	<td width="172" height="200" bgcolor="#44aa00" valign="middle">
@@ -174,8 +174,8 @@ weniger üppig nochmal im Herbst. In Südengland ist er winterhart, bei uns muß er
 		</p></td>
 	<td width="299" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center" style="margin-right: 10px;"><font size="3" face="Arial">
-Iris japonica gehört zur Gruppe der Evansia-Iris. Sie ist über die Gärten 
-der Mittelmeerländer, der Kanaren und Südenglands verbreitet und benötigt viel Feuchtigkeit.
+Iris japonica gehÃ¶rt zur Gruppe der Evansia-Iris. Sie ist Ã¼ber die GÃ¤rten 
+der MittelmeerlÃ¤nder, der Kanaren und SÃ¼denglands verbreitet und benÃ¶tigt viel Feuchtigkeit.
  Meine Pflanzen stammen vom Lago Maggiore.
 </font></p></td>
         </tr>
@@ -189,9 +189,9 @@ der Mittelmeerländer, der Kanaren und Südenglands verbreitet und benötigt viel F
  <tbody><tr>
        <td width="328" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
-Pleione formosana und einige ähnliche Pleionen müssen als Orchideen in ein lockeres Substrat 
-aus Sphagnum, Kiefernrinde und Blähton (jeder Spezialist hat da seine eigene Mischung)
- gepflanzt werden. Die Überwinterung erfolgt frostfrei und völlig trocken im Keller.
+Pleione formosana und einige Ã¤hnliche Pleionen mÃ¼ssen als Orchideen in ein lockeres Substrat 
+aus Sphagnum, Kiefernrinde und BlÃ¤hton (jeder Spezialist hat da seine eigene Mischung)
+ gepflanzt werden. Die Ãœberwinterung erfolgt frostfrei und vÃ¶llig trocken im Keller.
    </font>
           </p></td>
 	<td width="172" height="200" bgcolor="#44aa00" valign="middle">
@@ -205,8 +205,8 @@ aus Sphagnum, Kiefernrinde und Blähton (jeder Spezialist hat da seine eigene Mis
        <td width="328" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
 Pleione limprichtii ist sogar winterhart. Ich stelle sie aber im Winter trotzdem ins Kalthaus,
-wo sie nicht völlig austrocknen sollte. Wachstum und Blüte sind erheblich besser als bei
-Freilandüberwinterung.
+wo sie nicht vÃ¶llig austrocknen sollte. Wachstum und BlÃ¼te sind erheblich besser als bei
+FreilandÃ¼berwinterung.
  
 
  </font>
@@ -226,9 +226,9 @@ Freilandüberwinterung.
 		</p></td>
 	<td width="299" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center" style="margin-right: 10px;"><font size="3" face="Arial">
-Rehmania elata aus China ähnelt in Wuchs und Aussehen etwas unserem Fingerhut, hält es aber nur 
-in  milden Wintern draußen aus. Man zieht sie 2-jährig oder als kurzlebige Staude. Sie
-blüht von Mai bis Oktober. Samen wird nur gebildet, wenn man mehrere Pflanzen hat (Autosterilität).
+Rehmania elata aus China Ã¤hnelt in Wuchs und Aussehen etwas unserem Fingerhut, hÃ¤lt es aber nur 
+in  milden Wintern drauÃŸen aus. Man zieht sie 2-jÃ¤hrig oder als kurzlebige Staude. Sie
+blÃ¼ht von Mai bis Oktober. Samen wird nur gebildet, wenn man mehrere Pflanzen hat (AutosterilitÃ¤t).
 </font></p></td>
         </tr>
 </tbody></table><table border="0" height="30" cellspacing="0" cellpadding="0">
@@ -242,8 +242,8 @@ blüht von Mai bis Oktober. Samen wird nur gebildet, wenn man mehrere Pflanzen ha
  <tbody><tr>
        <td width="328" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
-Crinodendron hookerianum aus Chile wird in Südengland an geschützten Stellen bis zu 5m hoch. Die 
-im Mai erscheinenden Blüten leuchten weithin. Der immergrüne Baum oder Strauch benötigt kalkfreie Erde und
+Crinodendron hookerianum aus Chile wird in SÃ¼dengland an geschÃ¼tzten Stellen bis zu 5m hoch. Die 
+im Mai erscheinenden BlÃ¼ten leuchten weithin. Der immergrÃ¼ne Baum oder Strauch benÃ¶tigt kalkfreie Erde und
 etwas Schatten.
  </font>
           </p></td>
@@ -261,9 +261,9 @@ etwas Schatten.
 		</p></td>
 	<td width="299" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center" style="margin-right: 10px;"><font size="3" face="Arial">
-Pelargonium endlicherianum aus dem türkischen Taurusgebirge gilt zwar als das einzige bei uns winterharte Pelargonium.
-Das trifft aber nur zu, wenn die Pflanze im Winter völlig trocken gehalten wird. Die Überwinrterung
-im Kalthaus ist einfacher und bringt besser blühende Pflanzen.
+Pelargonium endlicherianum aus dem tÃ¼rkischen Taurusgebirge gilt zwar als das einzige bei uns winterharte Pelargonium.
+Das trifft aber nur zu, wenn die Pflanze im Winter vÃ¶llig trocken gehalten wird. Die Ãœberwinrterung
+im Kalthaus ist einfacher und bringt besser blÃ¼hende Pflanzen.
 </font></p></td>
         </tr>
 </tbody></table><table border="0" height="30" cellspacing="0" cellpadding="0">
@@ -276,8 +276,8 @@ im Kalthaus ist einfacher und bringt besser blühende Pflanzen.
  <tbody><tr>
        <td width="328" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
-Geranium maderense, das größte aller Geranien wird 1,5m hoch und fast ebenso breit. Schon 
-die Blätter sind imposant. Hier eine Einzelblüte dieser in Südengland auch im Freien gezogenen 
+Geranium maderense, das grÃ¶ÃŸte aller Geranien wird 1,5m hoch und fast ebenso breit. Schon 
+die BlÃ¤tter sind imposant. Hier eine EinzelblÃ¼te dieser in SÃ¼dengland auch im Freien gezogenen 
 Pflanze.
  </font>
           </p></td>
@@ -296,9 +296,9 @@ Pflanze.
 		</p></td>
 	<td width="299" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center" style="margin-right: 10px;"><font size="3" face="Arial">
-Und hier die ganze Blütendolde (Durchmesser etwa 40cm!). Da die Blüten nacheinander aufgehen, 
-blüht die Pflanze mehrere Wochen lang und stirbt dann leider meist ab, hinterläßt aber oft
- Tochterpflanzen und Sämlinge.
+Und hier die ganze BlÃ¼tendolde (Durchmesser etwa 40cm!). Da die BlÃ¼ten nacheinander aufgehen, 
+blÃ¼ht die Pflanze mehrere Wochen lang und stirbt dann leider meist ab, hinterlÃ¤ÃŸt aber oft
+ Tochterpflanzen und SÃ¤mlinge.
 
 </font></p></td>
         </tr>
@@ -316,10 +316,10 @@ blüht die Pflanze mehrere Wochen lang und stirbt dann leider meist ab, hinterläß
 		</p></td>
 	<td width="299" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center" style="margin-right: 10px;"><font size="3" face="Arial">
-Echium wildpretii ist eine der berühmtesten Pflanzen Teneriffas und La Palmas mit bis zu 4m hohem Blütenstand mit 
-tausenden von roten Blüten. Der Natternkopf wächst in ca. 2000m Höhe am Rande der Canadas in fast reiner 
-Lava und benötigt Sonne und Trockenheit. Im Winter verträgt er kurzfristig Frost bis -10°C.2-3 Jahre nach der 
-Aussaat erscheinen die Blüten. Danach stirbt die Pflanze ab. Die Aussaat gelang mir leicht. Diese Pflanze von
+Echium wildpretii ist eine der berÃ¼hmtesten Pflanzen Teneriffas und La Palmas mit bis zu 4m hohem BlÃ¼tenstand mit 
+tausenden von roten BlÃ¼ten. Der Natternkopf wÃ¤chst in ca. 2000m HÃ¶he am Rande der Canadas in fast reiner 
+Lava und benÃ¶tigt Sonne und Trockenheit. Im Winter vertrÃ¤gt er kurzfristig Frost bis -10Â°C.2-3 Jahre nach der 
+Aussaat erscheinen die BlÃ¼ten. Danach stirbt die Pflanze ab. Die Aussaat gelang mir leicht. Diese Pflanze von
 50cm Durchmesser ist 18 Monate alt.
 
 </font></p></td>
@@ -330,5 +330,5 @@ Aussaat erscheinen die Blüten. Danach stirbt die Pflanze ab. Die Aussaat gelang 
           <p align="center"></p></td>
         </tr>
  </tbody></table>
-</p><p><a href="index.html">zurück zur Startseite</a> <a href="Fotostartseiteneu.html">zurück zur Fotoübersicht</a>
+</p><p><a href="index.html">zurÃ¼ck zur Startseite</a> <a href="Fotostartseiteneu.html">zurÃ¼ck zur FotoÃ¼bersicht</a>
 </p></div></body></html>
