--- a/Kontaktneu.html
+++ b/Kontaktneu.html
@@ -4,7 +4,7 @@
 <meta name="keywords" lang="de" content="Garten, Steingarten, Pflanzen, Versand, Verkauf">
 <meta name="description" lang="de" content="Christopfs Pflanzenparadies">
 <style type="text/css" media="all">@import "style.css";</style>
-<link rel="alternate stylesheet" type="text/css" media="screen" title="Grünes Design" href="Kontaktneu_Dateien/a">
+<link rel="alternate stylesheet" type="text/css" media="screen" title="GrÃ¼nes Design" href="Kontaktneu_Dateien/a">
 <link rel="alternate stylesheet" type="text/css" media="screen" title="Rotes Design" href="Kontaktneu_Dateien/a"><title>Kontakt</title></head>
 
 <body bgcolor="#99cc33" text="#ffcc99" link="#ffcc99" vlink="#ffcc99" alink="#ffffff" leftmargin="30" topmargin="50" onload="makesnake()" style="width: 100%;">
@@ -78,8 +78,8 @@
 	<tr>
         <td width="100%" bgcolor="#007700">
           <p align="center"><font size="3" face="Arial">
- 		<b>Bei Kontaktaufnahme über E-Mail werden nur die von Ihnen angegebenen
- 		Daten vorübergehend gespeichert und nach spätestens 3 Monaten gelöscht.
+ 		<b>Bei Kontaktaufnahme Ã¼ber E-Mail werden nur die von Ihnen angegebenen
+ 		Daten vorÃ¼bergehend gespeichert und nach spÃ¤testens 3 Monaten gelÃ¶scht.
  		Sie werden nur zur Abwicklung der Bestellung oder Anfrage verwendet. 
  		Eine Weitergabe an Dritte ist ausgeschlossen. Cookies werden nicht gesetzt.
 		</b>
@@ -91,5 +91,5 @@
  </tbody></table>
 
 
-<p><a href="index.html">zurück zur Startseite</a></p>
+<p><a href="index.html">zurÃ¼ck zur Startseite</a></p>
 </div></body></html>
