--- a/NELKEN.HTML
+++ b/NELKEN.HTML
@@ -36,9 +36,9 @@ td {vertical-align:center; overflow:hidden; }
 		</td>
 	<td width="327" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center" style="margin-right: 10px;"><font size="3" face="Arial">
-Gleich als erstes eine der schönsten, eine Züchtung von Sündermann, Dianthus gratianopolitanus 
-`Bodensee´, leuchtend dunkelrot mit schöner Zeichnung und rechts D. gratianopolitanus albus 
-zonatus, eine 2-farbige Hybride ebenfalls von Sündermann.   
+Gleich als erstes eine der schÃ¶nsten, eine ZÃ¼chtung von SÃ¼ndermann, Dianthus gratianopolitanus 
+`BodenseeÂ´, leuchtend dunkelrot mit schÃ¶ner Zeichnung und rechts D. gratianopolitanus albus 
+zonatus, eine 2-farbige Hybride ebenfalls von SÃ¼ndermann.   
 </font></p></td>
  <td width="173" height="200" bgcolor="#44aa00" valign="middle&gt;
           &lt;p align=" right="" style="margin-left: 10px;">
@@ -55,8 +55,8 @@ zonatus, eine 2-farbige Hybride ebenfalls von Sündermann.
 		</td>
 	<td width="327" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center" style="margin-right: 10px;"><font size="3" face="Arial">
-Dianthus `Greystone´ ist eine der empfehlenswerten rein weissen Sorten, D. `White Spot´ ist eine sehr wüchsige eigene Züchtung 
-mit schöner Zeichnung.   
+Dianthus `GreystoneÂ´ ist eine der empfehlenswerten rein weissen Sorten, D. `White SpotÂ´ ist eine sehr wÃ¼chsige eigene ZÃ¼chtung 
+mit schÃ¶ner Zeichnung.   
 </font></p></td>
  <td width="173" height="200" bgcolor="#44aa00" valign="middle&gt;
           &lt;p align=" right="" style="margin-left: 10px;">
@@ -68,8 +68,8 @@ mit schöner Zeichnung.
  <tbody><tr>
         <td width="316" height="200" bgcolor="#44aa00" valign="middle">
          <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
-	Dianthus subacaulis aus Spanien in einer dunkelrot blühenden Form - die Normalform
-	blüht rosa - bildet nur 5cm hohe silbrige Polster.	
+	Dianthus subacaulis aus Spanien in einer dunkelrot blÃ¼henden Form - die Normalform
+	blÃ¼ht rosa - bildet nur 5cm hohe silbrige Polster.	
 		</font></p></td>
 	<td width="184" height="200" bgcolor="#44aa00" valign="middle">
           <p align="left" style="margin-right: 10px;">
@@ -85,9 +85,9 @@ mit schöner Zeichnung.
 		</p></td>
 	<td width="274" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center" style="margin-right: 10px;"><font size="3" face="Arial">
-Dianthus campestris blüht von Juli bis September ununterbrochen. Die einzelne Blüte ist sehr 
+Dianthus campestris blÃ¼ht von Juli bis September ununterbrochen. Die einzelne BlÃ¼te ist sehr 
 einfach, ein ganzer Busch davon aber sehr wirkungsvoll. D. pinifolius und D. nardiformis 
-sind ähnlich. </font></p></td>
+sind Ã¤hnlich. </font></p></td>
 	</tr>
 </tbody></table>
   <table border="0" width="500" height="210" cellspacing="0" cellpadding="0">
@@ -98,8 +98,8 @@ sind ähnlich. </font></p></td>
 		</p></td>
 	<td width="274" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center" style="margin-right: 10px;"><font size="3" face="Arial">
-Dianthus nardiformis ähnelt D. campestris, wird aber nicht ganz so groß. Die Blüten sind mehr gefranst
-und dunkler gefärbt. </font></p></td>
+Dianthus nardiformis Ã¤hnelt D. campestris, wird aber nicht ganz so groÃŸ. Die BlÃ¼ten sind mehr gefranst
+und dunkler gefÃ¤rbt. </font></p></td>
 	</tr>
 </tbody></table>
   <table border="0" width="500" height="210" cellspacing="0" cellpadding="0">
@@ -126,16 +126,16 @@ und dunkler gefärbt. </font></p></td>
 		</p></td>
 	<td width="274" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center" style="margin-right: 10px;"><font size="3" face="Arial">
-Dianthus brevicaulis aus dem Taurusgebirge bleibt klein und blüht reich, wenn auch
- unspektakulär. </font></p></td>
+Dianthus brevicaulis aus dem Taurusgebirge bleibt klein und blÃ¼ht reich, wenn auch
+ unspektakulÃ¤r. </font></p></td>
 	</tr>
 </tbody></table>
   <table border="0" width="500" height="210" cellspacing="0" cellpadding="0">
  <tbody><tr>
         <td width="316" height="200" bgcolor="#44aa00" valign="middle">
          <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
-Dianthus deltoides hat kleine aber schön gezeichnete Blüten - je nach Züchtung in 
-	unterschiedlichen Farben. Sie wächst auch in Magerwiesen.	
+Dianthus deltoides hat kleine aber schÃ¶n gezeichnete BlÃ¼ten - je nach ZÃ¼chtung in 
+	unterschiedlichen Farben. Sie wÃ¤chst auch in Magerwiesen.	
 		</font></p></td>
 	<td width="184" height="200" bgcolor="#44aa00" valign="middle">
           <p align="left" style="margin-right: 10px;">
@@ -152,8 +152,8 @@ Dianthus deltoides hat kleine aber schön gezeichnete Blüten - je nach Züchtung i
 		</p></td>
 	<td width="274" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center" style="margin-right: 10px;"><font size="3" face="Arial">
-Dianthus microlepis aus Bulgarien bildet schöne halbkugelige weiche Polster. Die rosa 
-Blüten erreichen nur ca 5mm Durchmesser und sind weniger wichtig. Braucht mageren Boden.
+Dianthus microlepis aus Bulgarien bildet schÃ¶ne halbkugelige weiche Polster. Die rosa 
+BlÃ¼ten erreichen nur ca 5mm Durchmesser und sind weniger wichtig. Braucht mageren Boden.
  </font></p></td>
 	</tr>
 </tbody></table>
@@ -163,7 +163,7 @@ Blüten erreichen nur ca 5mm Durchmesser und sind weniger wichtig. Braucht magere
          <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
 Dianthus erinaceus bildet noch imposantere Polster, die aber stachelig wie 
 	ein Igel sind. Angeblich ist sie mit D. webbianus identisch, was ich aber
-	 nicht bestätigen kann, wenn ich meine Pflanzen vergleiche (s.u.) . Blüten 
+	 nicht bestÃ¤tigen kann, wenn ich meine Pflanzen vergleiche (s.u.) . BlÃ¼ten 
 	 sind eher selten.
 		
 		</font></p></td>
@@ -181,8 +181,8 @@ Dianthus erinaceus bildet noch imposantere Polster, die aber stachelig wie
 		</p></td>
 	<td width="274" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center" style="margin-right: 10px;"><font size="3" face="Arial">
-Dianthus webbianus blüht erst Ende Juni und braucht Trockenheit und Sonne. Das Polster
-ist längst nicht so stachelig wie bei D. erinaceus.
+Dianthus webbianus blÃ¼ht erst Ende Juni und braucht Trockenheit und Sonne. Das Polster
+ist lÃ¤ngst nicht so stachelig wie bei D. erinaceus.
  </font></p></td>
 	</tr>
 </tbody></table>
@@ -190,8 +190,8 @@ ist längst nicht so stachelig wie bei D. erinaceus.
  <tbody><tr>
         <td width="316" height="200" bgcolor="#44aa00" valign="middle">
          <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
-	Dianthus monspessulanus dagegen benötigt ein Mindestmaß an Feuchtigkeit. Sie 
-	wächst in Wiesen Südeuropas und der Alpen. Hier die Unterart sternbergii aus den
+	Dianthus monspessulanus dagegen benÃ¶tigt ein MindestmaÃŸ an Feuchtigkeit. Sie 
+	wÃ¤chst in Wiesen SÃ¼deuropas und der Alpen. Hier die Unterart sternbergii aus den
 	Dolomiten.
 		
 		</font></p></td>
@@ -209,7 +209,7 @@ ist längst nicht so stachelig wie bei D. erinaceus.
 		</p></td>
 	<td width="274" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center" style="margin-right: 10px;"><font size="3" face="Arial">
-Dianthus gratianopolitanus bildet schöne Polster und blüht reich. Aus ihr sind viele Züchtungen
+Dianthus gratianopolitanus bildet schÃ¶ne Polster und blÃ¼ht reich. Aus ihr sind viele ZÃ¼chtungen
 entstanden.
  </font></p></td>
 	</tr>
@@ -219,8 +219,8 @@ entstanden.
         <td width="316" height="200" bgcolor="#44aa00" valign="middle">
          <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
 Dianthus arenarius, hier sicher nicht die reine Art, sondern eine mir unbekannte
-	Sorte, gehört trotz schöner Blüte nicht zu meinen Lieblingen, da sie zu hoch wächst und
-	 dann auseinanderfällt.
+	Sorte, gehÃ¶rt trotz schÃ¶ner BlÃ¼te nicht zu meinen Lieblingen, da sie zu hoch wÃ¤chst und
+	 dann auseinanderfÃ¤llt.
 		
 		</font></p></td>
 	<td width="184" height="200" bgcolor="#44aa00" valign="middle">
@@ -245,8 +245,8 @@ Dianthus plumarius kommt in einer Vielzahl von Sorten vor, auch in Kreuzung mit 
  <tbody><tr>
         <td width="316" height="200" bgcolor="#44aa00" valign="middle">
          <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
-Dianthus leucocephalus (ein unsicherer Name) wächst ganz flach, die kleinen weissen 
-	Blüten schliessen sich mittags. Nur für Liebhaber.
+Dianthus leucocephalus (ein unsicherer Name) wÃ¤chst ganz flach, die kleinen weissen 
+	BlÃ¼ten schliessen sich mittags. Nur fÃ¼r Liebhaber.
 		
 		</font></p></td>
 	<td width="184" height="200" bgcolor="#44aa00" valign="middle">
@@ -263,8 +263,8 @@ Dianthus leucocephalus (ein unsicherer Name) wächst ganz flach, die kleinen weis
 		</p></td>
 	<td width="274" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center" style="margin-right: 10px;"><font size="3" face="Arial">
-Dianthus petraeus blüht weiß.Je sonniger und trockener der Standort, desto schöner und reicher 
-die Blüte. Die Unterart D. petraeus v. noeanus blüht etwas später.
+Dianthus petraeus blÃ¼ht weiÃŸ.Je sonniger und trockener der Standort, desto schÃ¶ner und reicher 
+die BlÃ¼te. Die Unterart D. petraeus v. noeanus blÃ¼ht etwas spÃ¤ter.
  </font></p></td>
 	</tr>
 </tbody></table>
@@ -272,7 +272,7 @@ die Blüte. Die Unterart D. petraeus v. noeanus blüht etwas später.
  <tbody><tr>
         <td width="316" height="200" bgcolor="#44aa00" valign="middle">
          <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
-Dianthus furcatus aus den Seealpen hat zwar nur relativ kleine Blüten, die aber in großer Zahl erscheinen.
+Dianthus furcatus aus den Seealpen hat zwar nur relativ kleine BlÃ¼ten, die aber in groÃŸer Zahl erscheinen.
 Es gibt verschiedene Unterarten und Typen.
 		
 		</font></p></td>
@@ -290,11 +290,11 @@ Es gibt verschiedene Unterarten und Typen.
 		</p></td>
 	<td width="274" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center" style="margin-right: 10px;"><font size="3" face="Arial">
-Dianthus simulans ähnelt D. erinaceus. Das harte Stachelpolster ist aber kleiner, die Blühneigung ist besser. Trocken und heiss 
+Dianthus simulans Ã¤hnelt D. erinaceus. Das harte Stachelpolster ist aber kleiner, die BlÃ¼hneigung ist besser. Trocken und heiss 
 halten! Die aus Mazedonien stammende Art wird auch oft als Unterart von D. gracilis angesehen.
  </font></p></td>
 	</tr>
 </tbody></table>
 
-</p><p><a href="index.html">zurück zur Startseite</a> <a href="Fotostartseiteneu.html">zurück zur Fotoübersicht</a>
+</p><p><a href="index.html">zurÃ¼ck zur Startseite</a> <a href="Fotostartseiteneu.html">zurÃ¼ck zur FotoÃ¼bersicht</a>
 </p></div></body></html>
