--- a/Schattenpflanzen.html
+++ b/Schattenpflanzen.html
@@ -36,8 +36,8 @@ td {vertical-align:center; overflow:hidden; }
 		</td>
 	<td width="327" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center" style="margin-right: 10px;"><font size="3" face="Arial">
-Sanguinaria canadensis, die Blutwurz, blüht Ende April leider nur ganz kurz - oft nur 1 Tag. Die
-gefülltblühende Form hält länger, ist aber nur schwer zu bekommen.  
+Sanguinaria canadensis, die Blutwurz, blÃ¼ht Ende April leider nur ganz kurz - oft nur 1 Tag. Die
+gefÃ¼lltblÃ¼hende Form hÃ¤lt lÃ¤nger, ist aber nur schwer zu bekommen.  
 </font></p></td>
  <td width="173" height="200" bgcolor="#44aa00" valign="middle&gt;
           &lt;p align=" right="" style="margin-left: 10px;">
@@ -49,11 +49,11 @@ gefülltblühende Form hält länger, ist aber nur schwer zu bekommen.
  <tbody><tr>
         <td width="316" height="200" bgcolor="#44aa00" valign="middle">
          <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
-Glaucidium palmatum, eine Kostbarkeit aus Japan, möchte Schatten und 
-		feuchten Humusboden, dann blüht es im April, wenn die Schnecken es nicht
+Glaucidium palmatum, eine Kostbarkeit aus Japan, mÃ¶chte Schatten und 
+		feuchten Humusboden, dann blÃ¼ht es im April, wenn die Schnecken es nicht
 		 vorher erwischt haben. Vor der Aussaat sollten die Samen mit 
-		 Giberrelinsäure behandelt werden. Die Blüten wirken sehr edel, aber fremd. 
-		 Die Kombination mit anderen blühenden Pflanzen ist schwierig.
+		 GiberrelinsÃ¤ure behandelt werden. Die BlÃ¼ten wirken sehr edel, aber fremd. 
+		 Die Kombination mit anderen blÃ¼henden Pflanzen ist schwierig.
 		</font></p></td>
 	<td width="184" height="200" bgcolor="#44aa00" valign="middle">
           <p align="left" style="margin-right: 10px;">
@@ -69,9 +69,9 @@ Glaucidium palmatum, eine Kostbarkeit aus Japan, möchte Schatten und
 		</p></td>
 	<td width="250" height="200" bgcolor="#44aa00" valign="middle">
          <p align="center"><font size="2" face="Arial">
-Haberlea rhodopensis (links) fühlt sich trotz seiner Verwandtschaft zum
+Haberlea rhodopensis (links) fÃ¼hlt sich trotz seiner Verwandtschaft zum
 Usambaraveilchen bei uns im schattigen Steingarten in Mauerfugen wohl
-und blüht dort bereits Ende April. 2 Wochen später setzt die Blüte der
+und blÃ¼ht dort bereits Ende April. 2 Wochen spÃ¤ter setzt die BlÃ¼te der
 mit ihr verwandten Ramonda myconi (rechts) ein, die die gleichen
 Lebensbedingungen braucht und dann uralt wird. </font></p></td>
 	<td width="149" height="200" bgcolor="#44aa00" valign="middle">
@@ -89,8 +89,8 @@ Lebensbedingungen braucht und dann uralt wird. </font></p></td>
 	        <td width="250" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center"><font size="2" face="Arial">
 Ramonda serbica ist extrem selten. Ich kenne einen Standort in einer 
-unzugänglichen Schlucht in Nordgriechenland. Die Vermehrung geht furchtbar langsam
--ich habe in 10 Jahren nur 2 zusätzliche Pflanzen erzielt. </font></p></td>
+unzugÃ¤nglichen Schlucht in Nordgriechenland. Die Vermehrung geht furchtbar langsam
+-ich habe in 10 Jahren nur 2 zusÃ¤tzliche Pflanzen erzielt. </font></p></td>
 	  		        </tr>
 </tbody></table>
 
@@ -103,9 +103,9 @@ unzugänglichen Schlucht in Nordgriechenland. Die Vermehrung geht furchtbar langs
 		</p></td>
 	<td width="250" height="200" bgcolor="#44aa00" valign="middle">
          <p align="center"><font size="2" face="Arial">
-Ramonda nathaliae (links)ist zierlicher als R. myconi und leider auch empfindlicher. Blüten kommen nur wenige.
-Jancea heldreichii (rechts) vom Olymp muß unbedingt vor Sonne und Regen 
-geschützt werden. Sie sollte an der Nordseite eines überstehenden Steines stehen. Im Winter geht es nicht ohne Glasplatte.</font></p></td>
+Ramonda nathaliae (links)ist zierlicher als R. myconi und leider auch empfindlicher. BlÃ¼ten kommen nur wenige.
+Jancea heldreichii (rechts) vom Olymp muÃŸ unbedingt vor Sonne und Regen 
+geschÃ¼tzt werden. Sie sollte an der Nordseite eines Ã¼berstehenden Steines stehen. Im Winter geht es nicht ohne Glasplatte.</font></p></td>
 	<td width="149" height="200" bgcolor="#44aa00" valign="middle">
  	 <p align="left" style="margin-right: 10px;">
 		<img src="Jancea-heldreichii.jpg" width="200" height="265" align="right">
@@ -120,7 +120,7 @@ geschützt werden. Sie sollte an der Nordseite eines überstehenden Steines stehen
 		</p></td>
 	        <td width="250" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center"><font size="2" face="Arial">
-Meconopsis robustus ähnelt M. cambrica, ist aber etwas kräftiger. </font></p></td>
+Meconopsis robustus Ã¤hnelt M. cambrica, ist aber etwas krÃ¤ftiger. </font></p></td>
 	  		        </tr>
 </tbody></table>
  <table border="0" width="500" height="210" cellspacing="0" cellpadding="0">
@@ -129,10 +129,10 @@ Meconopsis robustus ähnelt M. cambrica, ist aber etwas kräftiger. </font></p></t
          <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
 Meconopsis lutescens (unter diesem dubiosen Namen erhielt ich den Samen, aus dem
 	diese Pflanze entstand) sieht wie M. betonicifolia aus, bildet aber einen Horst, so
-	dass es leichter ist, die Pflanze für einige Jahre zu erhalten. M. betonicifolia 
-	stirbst in unserem Klima meist nach der Blüte ab. Ideal wären kühle Temperatur und hohe
+	dass es leichter ist, die Pflanze fÃ¼r einige Jahre zu erhalten. M. betonicifolia 
+	stirbst in unserem Klima meist nach der BlÃ¼te ab. Ideal wÃ¤ren kÃ¼hle Temperatur und hohe
 	Luftfeuchtigkeit. In Island (botanischer Garten Akureyri) sah ich riesige Horste mit 
-	über 30 Blütenstängeln, auch in Schottland wachsen sie gut.
+	Ã¼ber 30 BlÃ¼tenstÃ¤ngeln, auch in Schottland wachsen sie gut.
 		</font></p></td>
 	<td width="240" height="143" bgcolor="#44aa00" valign="middle">
           <p align="left" style="margin-right: 10px;">
@@ -149,8 +149,8 @@ Meconopsis lutescens (unter diesem dubiosen Namen erhielt ich den Samen, aus dem
 		</p></td>
 	<td width="250" height="200" bgcolor="#44aa00" valign="middle">
          <p align="center"><font size="2" face="Arial">
-Trillium grandiflorum aus Nordamerika ist wie alle Trilliumarten nur sehr landsam zu vermehren. Es wächst in feuchtem Schatten sehr zuverlässig.
-Die anfangs weisse Blüte färbt sich nach einigen Tagen rosa. </font></p></td>
+Trillium grandiflorum aus Nordamerika ist wie alle Trilliumarten nur sehr landsam zu vermehren. Es wÃ¤chst in feuchtem Schatten sehr zuverlÃ¤ssig.
+Die anfangs weisse BlÃ¼te fÃ¤rbt sich nach einigen Tagen rosa. </font></p></td>
 <td width="149" height="200" bgcolor="#44aa00" valign="middle">
  	 <p align="left" style="margin-right: 10px;">
 		<img src="Trillium3.jpg" width="238" height="190" align="right">
@@ -162,8 +162,8 @@ Die anfangs weisse Blüte färbt sich nach einigen Tagen rosa. </font></p></td>
  <tbody><tr>
         <td width="316" height="200" bgcolor="#44aa00" valign="middle">
          <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
-Melittis melissophyllum ist in Süddeutschland heimisch und eignet sich für den nicht zu sonnigen Gehölzrand.
-Es gibt auch eine rein weiße Form.
+Melittis melissophyllum ist in SÃ¼ddeutschland heimisch und eignet sich fÃ¼r den nicht zu sonnigen GehÃ¶lzrand.
+Es gibt auch eine rein weiÃŸe Form.
 		</font></p></td>
 	<td width="240" height="143" bgcolor="#44aa00" valign="middle">
           <p align="left" style="margin-right: 10px;">
@@ -179,15 +179,15 @@ Es gibt auch eine rein weiße Form.
 		</p></td>
 	        <td width="250" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center"><font size="2" face="Arial">
-Kalmia polifolia v. microphylla wird nur 20cm hoch. Kalmien benötigen die gleichen Bedingungen wie Rhododendren
-und setzen deren Blüte im Juni fort.Die anderen Arten und Hybriden werden größer. </font></p></td>
+Kalmia polifolia v. microphylla wird nur 20cm hoch. Kalmien benÃ¶tigen die gleichen Bedingungen wie Rhododendren
+und setzen deren BlÃ¼te im Juni fort.Die anderen Arten und Hybriden werden grÃ¶ÃŸer. </font></p></td>
 	  		        </tr>
 </tbody></table>
  <table border="0" width="500" height="210" cellspacing="0" cellpadding="0">
  <tbody><tr>
         <td width="316" height="200" bgcolor="#44aa00" valign="middle">
          <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
-Kalmia latifolia (hier eine Hybride)wird über 1m hoch und blüht überreich. Sie benötigt auch
+Kalmia latifolia (hier eine Hybride)wird Ã¼ber 1m hoch und blÃ¼ht Ã¼berreich. Sie benÃ¶tigt auch
 im Sommer etwas Feuchtigkeit.
 		</font></p></td>
 	<td width="240" height="143" bgcolor="#44aa00" valign="middle">
@@ -204,7 +204,7 @@ im Sommer etwas Feuchtigkeit.
 		</p></td>
 	        <td width="250" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center"><font size="2" face="Arial">
-Deinanthe caerulea v. bifida fühlt sich im feucht-schattigen Beet wohl. Wertvoll, da sie erst im Sommerblüht, wenn 
+Deinanthe caerulea v. bifida fÃ¼hlt sich im feucht-schattigen Beet wohl. Wertvoll, da sie erst im SommerblÃ¼ht, wenn 
 es dort sonst nicht mehr viel zu sehen gibt. </font></p></td>
 	  		        </tr>
 </tbody></table>
@@ -212,7 +212,7 @@ es dort sonst nicht mehr viel zu sehen gibt. </font></p></td>
  <tbody><tr>
         <td width="316" height="200" bgcolor="#44aa00" valign="middle">
          <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
-Ranunculus ficaria ist ein gefürchtetes Unkraut, einige Züchtungen wie dieses `Ken Aslet´ wachsen aber sehr moderat.
+Ranunculus ficaria ist ein gefÃ¼rchtetes Unkraut, einige ZÃ¼chtungen wie dieses `Ken AsletÂ´ wachsen aber sehr moderat.
 		</font></p></td>
 	<td width="240" height="143" bgcolor="#44aa00" valign="middle">
           <p align="left" style="margin-right: 10px;">
@@ -229,14 +229,14 @@ Ranunculus ficaria ist ein gefürchtetes Unkraut, einige Züchtungen wie dieses `K
 	        <td width="250" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center"><font size="2" face="Arial">
 Corydalis elata braucht sehr lockeren humusreichen Boden und breitet sich dann gut aus. Sehr edle blaue Farbe.
-Im Sommer zieht dieser Lerchensporn völlig ein. </font></p></td>
+Im Sommer zieht dieser Lerchensporn vÃ¶llig ein. </font></p></td>
 	  		        </tr>
 </tbody></table>
 <table border="0" width="500" height="210" cellspacing="0" cellpadding="0">
  <tbody><tr>
         <td width="316" height="200" bgcolor="#44aa00" valign="middle">
          <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
-Cymbalaria pallida alba ist etwas größer als das bekannte Zymbelkraut C. muralis. Idealerweise wächst es an einer scharrigen Quelle oder am Bachufer.
+Cymbalaria pallida alba ist etwas grÃ¶ÃŸer als das bekannte Zymbelkraut C. muralis. Idealerweise wÃ¤chst es an einer scharrigen Quelle oder am Bachufer.
 		</font></p></td>
 	<td width="240" height="143" bgcolor="#44aa00" valign="middle">
           <p align="left" style="margin-right: 10px;">
@@ -244,5 +244,5 @@ Cymbalaria pallida alba ist etwas größer als das bekannte Zymbelkraut C. muralis
 		</p></td>
         </tr>
         </tbody></table>
-</p><p><a href="index.html">zurück zur Startseite</a> <a href="Fotostartseiteneu.html">zurück zur Fotoübersicht</a>
+</p><p><a href="index.html">zurÃ¼ck zur Startseite</a> <a href="Fotostartseiteneu.html">zurÃ¼ck zur FotoÃ¼bersicht</a>
 </p></div></body></html>
