--- a/Zistrosen.html
+++ b/Zistrosen.html
@@ -38,17 +38,17 @@ td {vertical-align:center; overflow:hidden;}
 		</p></td>
 	<td width="284" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center" style="margin-right: 10px;"><font size="3" face="Arial">
-Cistus creticus mit rosa Blüten und silbrigen Blättern ist als junge
-Pflanze ziemlich winterhart, man sollte stets für Nachzucht sorgen. Die
-Blütenfarbe läßt sich nur schwer kombinieren. </font></p></td>
+Cistus creticus mit rosa BlÃ¼ten und silbrigen BlÃ¤ttern ist als junge
+Pflanze ziemlich winterhart, man sollte stets fÃ¼r Nachzucht sorgen. Die
+BlÃ¼tenfarbe lÃ¤ÃŸt sich nur schwer kombinieren. </font></p></td>
 	      </tr>
  </tbody></table>
  <table border="0" width="500" height="210" cellspacing="0" cellpadding="0">
  <tbody><tr>
         <td width="320" height="200" bgcolor="#44aa00" valign="middle">
          <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
-Cistus monspeliensis hat sehr viele kleine Blüten; nicht sicher winterhart. Die Samen 
-		für meine Pflanzen stammen von den Kanaren, aber auch Pflanzen aus dem Mittelmeerraum
+Cistus monspeliensis hat sehr viele kleine BlÃ¼ten; nicht sicher winterhart. Die Samen 
+		fÃ¼r meine Pflanzen stammen von den Kanaren, aber auch Pflanzen aus dem Mittelmeerraum
 		kommen hier oft nicht durch den Winter. Die  Winter 2006-2008 ging alles gut, 2009 starb viel ab.
 		
 		</font></p></td>
@@ -66,10 +66,10 @@ Cistus monspeliensis hat sehr viele kleine Blüten; nicht sicher winterhart. Die 
 		</p></td>
 	<td width="337" height="200" bgcolor="#44aa00" valign="middle">
          <p align="center" style="margin-right: 10px;"><font size="3" face="Arial">
-Cistus ladanifer aus Spanien hat die prächtigsten Blüten aller
+Cistus ladanifer aus Spanien hat die prÃ¤chtigsten BlÃ¼ten aller
 Zistrosen.Es wurde oft in Hybriden eingekreuzt. Obwohl  5
 Winter ohne Schutz gut vertragen wurden, stelle ich immer zur
-Sicherheit auch eine Pflanze in das Kalthaus. Im Januar 2009 gab es draußen schwere Schäden. 
+Sicherheit auch eine Pflanze in das Kalthaus. Im Januar 2009 gab es drauÃŸen schwere SchÃ¤den. 
 Samen setzen die Pflanzen bei mir im Gegensatz zur Natur nur ganz selten an.</font></p></td>
         	        </tr>	
 </tbody></table>
@@ -78,8 +78,8 @@ Samen setzen die Pflanzen bei mir im Gegensatz zur Natur nur ganz selten an.</fo
        <td width="331" height="200" bgcolor="#44aa00" valign="middle">
          <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
 Cistus salviifolius habe ich als aufrecht wachsenden Busch aus den Bergen
-		 der Toscana. Die meisten Pflanzen haben in den letzten 12 Jahren überlebt
-		 und blühen sehr reich, der Januar 2009 ließ aber viele Pflanzen absterben. 
+		 der Toscana. Die meisten Pflanzen haben in den letzten 12 Jahren Ã¼berlebt
+		 und blÃ¼hen sehr reich, der Januar 2009 lieÃŸ aber viele Pflanzen absterben. 
 		</font></p></td>
 	<td width="169" height="200" bgcolor="#44aa00" valign="middle">
           <p align="left" style="margin-right: 10px;">
@@ -96,7 +96,7 @@ Cistus salviifolius habe ich als aufrecht wachsenden Busch aus den Bergen
 		</p></td>
 	<td width="225" height="200" bgcolor="#44aa00" valign="middle">
            <p align="center" style="margin-right: 10px;"><font size="3" face="Arial">
-Hier noch einmal 3 Zistrosen zum Größenvergleich:links C. ladanifer,
+Hier noch einmal 3 Zistrosen zum GrÃ¶ÃŸenvergleich:links C. ladanifer,
 rechts oben C. salviifolius und rechts unten C. monspeliensis. </font></p></td>
         </tr>
 </tbody></table>
@@ -104,9 +104,9 @@ rechts oben C. salviifolius und rechts unten C. monspeliensis. </font></p></td>
  <tbody><tr>
        <td width="331" height="200" bgcolor="#44aa00" valign="middle">
          <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
-Cistus populifolius kommt von Südfrankreich bis nach Portugal vor. Die reinweißen
-	Blüten wirken sehr edel porzellanartig. Die Winterhärte ist erstaunlich gut. Den Winter 2010/11 hat sie besser als
-die meisten anderen Arten  überstanden.
+Cistus populifolius kommt von SÃ¼dfrankreich bis nach Portugal vor. Die reinweiÃŸen
+	BlÃ¼ten wirken sehr edel porzellanartig. Die WinterhÃ¤rte ist erstaunlich gut. Den Winter 2010/11 hat sie besser als
+die meisten anderen Arten  Ã¼berstanden.
 	
 		</font></p></td>
 	<td width="169" height="200" bgcolor="#44aa00" valign="middle">
@@ -118,9 +118,9 @@ die meisten anderen Arten  überstanden.
  <tbody><tr>
        <td width="331" height="200" bgcolor="#44aa00" valign="middle">
          <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
-Cistus psilosepalus ähnelt in der Blüte C. monspeliensis .Frei ausgepflanzte Exemplare 
-überstanden den Januar 2009 nicht, im kalten Kasten haben sie ohne Schaden überlebt.
-Die letzten Winter wurden sehr gut überstanden.
+Cistus psilosepalus Ã¤hnelt in der BlÃ¼te C. monspeliensis .Frei ausgepflanzte Exemplare 
+Ã¼berstanden den Januar 2009 nicht, im kalten Kasten haben sie ohne Schaden Ã¼berlebt.
+Die letzten Winter wurden sehr gut Ã¼berstanden.
 		</font></p></td>
 	<td width="169" height="200" bgcolor="#44aa00" valign="middle">
           <p align="left" style="margin-right: 10px;">
@@ -144,8 +144,8 @@ Die letzten Winter wurden sehr gut überstanden.
 		</p></td>
 	<td width="225" height="200" bgcolor="#44aa00" valign="middle">
            <p align="center" style="margin-right: 10px;"><font size="3" face="Arial">
-In den Picos de Europa in Nordspanien fand ich diesen Typ von  Cistus salviifolius  Er wächst nicht aufrecht, sondern mehr kriechend.
-Nicht immer zuverlässig hart.
+In den Picos de Europa in Nordspanien fand ich diesen Typ von  Cistus salviifolius  Er wÃ¤chst nicht aufrecht, sondern mehr kriechend.
+Nicht immer zuverlÃ¤ssig hart.
  </font></p></td>
         </tr>
 </tbody></table>
@@ -154,7 +154,7 @@ Nicht immer zuverlässig hart.
  <tbody><tr>
        <td width="331" height="200" bgcolor="#44aa00" valign="middle">
          <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
-Cistus albidus aus dem westlichen Mittelmeerraum mit weißfilzigen Blättern ähnelt etwas C. creticus.
+Cistus albidus aus dem westlichen Mittelmeerraum mit weiÃŸfilzigen BlÃ¤ttern Ã¤hnelt etwas C. creticus.
 		</font></p></td>
 	<td width="169" height="200" bgcolor="#44aa00" valign="middle">
           <p align="left" style="margin-right: 10px;">
@@ -175,5 +175,5 @@ Cistus salviifolius in der aufrechten Form aus der Toskana.
  </font></p></td>
         </tr>
 </tbody></table>
-</p><p><a href="index.html">zurück zur Startseite</a> <a href="Fotostartseiteneu.html">zurück zur Fotoübersicht</a>
+</p><p><a href="index.html">zurÃ¼ck zur Startseite</a> <a href="Fotostartseiteneu.html">zurÃ¼ck zur FotoÃ¼bersicht</a>
 </p></div></div></body></html>
