--- a/linksammlung.html
+++ b/linksammlung.html
@@ -6,26 +6,26 @@
 </head>
 
 <body bgcolor=#008800 text=#FFCC99 link=#88AA55 vlink=#440000 alink=#FFFFFF leftmargin=30 topmargin=50 onLoad="makesnake()" style="width:100%; overflow-x:hidden; overflow-y:scroll">
-<spacer type=horizontal size=800><a href="index.html">zurück zur Startseite</a>
-<h1>Hier gibt es Links zu allen möglichen Themen rund um den Garten</h1>
+<spacer type=horizontal size=800><a href="index.html">zurÃ¼ck zur Startseite</a>
+<h1>Hier gibt es Links zu allen mÃ¶glichen Themen rund um den Garten</h1>
 <br>
 <br>
 <p><a href="http://www.gds-staudenfreunde.de/">www.gds-staudenfreunde.de</a>&nbsp;&nbsp;Gesellschaft der Staudenfreunde</p>
-<p><a href="http://www.semperhorst.de/">www.semperhorst.de</a>&nbsp;&nbsp;Pflanzenliebhaber; alles über Sempervivum</p>
+<p><a href="http://www.semperhorst.de/">www.semperhorst.de</a>&nbsp;&nbsp;Pflanzenliebhaber; alles Ã¼ber Sempervivum</p>
 <p><a href="http://www.gartentechnik.de/">www.gartentechnik.de</a>&nbsp;&nbsp;Linksammlung, Branchenbuch, Organisationen usw.</p>
 <p><a href="http://www.martinhaberer.de/">www.martinhaberer.de</a>&nbsp;&nbsp;Pflanzenliebhaber, Sempervivum</p>
 <p><a href="http://www.grueneranzeiger.de/">www.grueneranzeiger.de</a>&nbsp;&nbsp;Veranstaltungen, Termine, suche-biete-tausche</p>
 <p><a href="http://www.orchidee.de/">www.orchidee.de</a>&nbsp;&nbsp;Deutsche Orchideengesellschaft</p>
-<p><a href="http://www.biologie.uni-ulm.de/systax/infgard/gardens/germany.html">www.biologie.uni-ulm.de</a>&nbsp;&nbsp;Informationsystem Botanischer Gärten</p>
-<p><a href="http://www.uni-karlsruhe.de/~db03/sey_li.html">www.uni-karlsruhe.de</a>&nbsp;&nbsp;Botanische Gärten weltweit</p>
-<p><a href="http://bot-garden.uibk.ac.at/">bot-garden.uibk.ac.at</a>&nbsp;&nbsp;Alpine Gärten Innsbruck</p>
-<p><a href="http://www.greenseek.de/">www.greenseek.de</a>&nbsp;&nbsp;grüne Suchmaschine</p>
+<p><a href="http://www.biologie.uni-ulm.de/systax/infgard/gardens/germany.html">www.biologie.uni-ulm.de</a>&nbsp;&nbsp;Informationsystem Botanischer GÃ¤rten</p>
+<p><a href="http://www.uni-karlsruhe.de/~db03/sey_li.html">www.uni-karlsruhe.de</a>&nbsp;&nbsp;Botanische GÃ¤rten weltweit</p>
+<p><a href="http://bot-garden.uibk.ac.at/">bot-garden.uibk.ac.at</a>&nbsp;&nbsp;Alpine GÃ¤rten Innsbruck</p>
+<p><a href="http://www.greenseek.de/">www.greenseek.de</a>&nbsp;&nbsp;grÃ¼ne Suchmaschine</p>
 <p><a href="http://www.juergens-gartenwelt.de/">www.juergens-gartenwelt.de</a>&nbsp;&nbsp;Steingartenfan mit vielen Fotos</p>
 <p><a href="http://www.botanikus.de/">www.botanikus.de</a>&nbsp;&nbsp;Datenbank, Giftpflanzen, Heilpflanzen, Literatur</p> 
-<p><a href="http://www.gartenlinksammlung.de/lpers.htm">www.gartenlinksammlung.de/lpers.htm</a>&nbsp;&nbsp;Linksammlung, Berühmtheiten aus der Gartenwelt</p>
-<p><a href="http://www.baumpfingstrosen.de/">www.baumpfingstrosen.de</a>&nbsp;&nbsp;alles über Baumpaeonien</p> 
+<p><a href="http://www.gartenlinksammlung.de/lpers.htm">www.gartenlinksammlung.de/lpers.htm</a>&nbsp;&nbsp;Linksammlung, BerÃ¼hmtheiten aus der Gartenwelt</p>
+<p><a href="http://www.baumpfingstrosen.de/">www.baumpfingstrosen.de</a>&nbsp;&nbsp;alles Ã¼ber Baumpaeonien</p> 
 <br>
 <br>
-<p> Bitte haben Sie Verständnis dafür, dass ich für den Inhalt der verlinkten Seiten nicht haften kann. </p>
+<p> Bitte haben Sie VerstÃ¤ndnis dafÃ¼r, dass ich fÃ¼r den Inhalt der verlinkten Seiten nicht haften kann. </p>
 </body>
 </html>>
