--- a/AnderePflanzen.HTML
+++ b/AnderePflanzen.HTML
@@ -36,8 +36,8 @@ td {vertical-align:center; overflow:hidden; }
 		</td>
 	<td width="327" height="200" bgcolor="#44aa00" valign="middle">
    Cercis siliquastrum, der Judasbaum, ist im gesamten Mittelmeerraum weit verbreitet. Wegen
-   seiner schönen Blüte auch bei uns empfehlenswert. Im Weinbauklima völlig winterhart.
-   Ganz ähnlich und auch hart sind C. chinensis und C. canadensis.
+   seiner schÃ¶nen BlÃ¼te auch bei uns empfehlenswert. Im Weinbauklima vÃ¶llig winterhart.
+   Ganz Ã¤hnlich und auch hart sind C. chinensis und C. canadensis.
  </font></p></td>
         </tr>
  </tbody></table>
@@ -50,8 +50,8 @@ td {vertical-align:center; overflow:hidden; }
 		</p></td>
 	        <td width="250" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center"><font size="2" face="Arial">
-Poncirus trifoliatus, die Bitterorange, ist das einzige bei uns winterharte Zitrusgewächs.
-Ein enorm stacheliger Busch oder kleiner Baum mit sehr schönen weißen Blüten im April
+Poncirus trifoliatus, die Bitterorange, ist das einzige bei uns winterharte ZitrusgewÃ¤chs.
+Ein enorm stacheliger Busch oder kleiner Baum mit sehr schÃ¶nen weiÃŸen BlÃ¼ten im April
 und bitteren Orangen im Herbst. 
  </font></p></td>
 	<td width="175" height="180" bgcolor="#44aa00" valign="middle">
@@ -67,7 +67,7 @@ und bitteren Orangen im Herbst.
 		<img src="Poncirus-trifoliatus.JPG" width="300" height="255" align="left"> 
 		</td>
 	<td width="327" height="200" bgcolor="#44aa00" valign="middle">
-   Im September werden die bitteren Früchte gelb. Das Laub färbt sich kupferfarben-orange-gelb.
+   Im September werden die bitteren FrÃ¼chte gelb. Das Laub fÃ¤rbt sich kupferfarben-orange-gelb.
  </font></p></td>
         </tr>
  </tbody></table>
@@ -76,7 +76,7 @@ und bitteren Orangen im Herbst.
  <tbody><tr>
        <td width="300" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
-Exochorda x macrantha `The Bride´aus China wird 2m hoch und blüht schon im April an überhängenden 
+Exochorda x macrantha `The BrideÂ´aus China wird 2m hoch und blÃ¼ht schon im April an Ã¼berhÃ¤ngenden 
 Zweigen sehr reich. Pflegeleicht! </font></p></td>
 	<td width="329" height="200" bgcolor="#44aa00" valign="middle"> 
          <p align="left" style="margin-right: 10px;">
@@ -95,8 +95,8 @@ Zweigen sehr reich. Pflegeleicht! </font></p></td>
 	<td width="267" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center" style="margin-right: 10px;"><font size="3" face="Arial">
 Paeonia cambessedesii ist in ihrer Heimat Mallorca selten geworden. Diese aus Samen in Freien 
-gezogene Pflanze blühte nach 4 Jahren zum ersten Mal. Sie wird nur 40cm hoch und
- soll nicht ganz winterhart sein, was ich bisher nicht bestätigen kann. 		
+gezogene Pflanze blÃ¼hte nach 4 Jahren zum ersten Mal. Sie wird nur 40cm hoch und
+ soll nicht ganz winterhart sein, was ich bisher nicht bestÃ¤tigen kann. 		
  
  </font></p></td>
         </tr>
@@ -110,7 +110,7 @@ gezogene Pflanze blühte nach 4 Jahren zum ersten Mal. Sie wird nur 40cm hoch und
 		</p></td>
 	<td width="267" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center" style="margin-right: 10px;"><font size="3" face="Arial">
-Im Aufblühen sieht die ungefüllte Blüte mit den goldenen Staubgefässen besonders schön aus. 		
+Im AufblÃ¼hen sieht die ungefÃ¼llte BlÃ¼te mit den goldenen StaubgefÃ¤ssen besonders schÃ¶n aus. 		
  
  </font></p></td>
         </tr>
@@ -121,9 +121,9 @@ Im Aufblühen sieht die ungefüllte Blüte mit den goldenen Staubgefässen besonders
  <tbody><tr>
        <td width="300" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center" style="margin-left: 10px;"><font size="3" face="Arial">
-Crocosmis crocosmiflora, besser bekannt unter dem Namen Montbretie, galt früher als frostfrei zu überwinternde
-Kübelpflanze. Meine Pflanzen haben den Januar 2009 bei -14°C mit nur geringen Schäden im Garten frei 
-ausgepflanzt, aber sehr trocken gehalten, überstanden. 
+Crocosmis crocosmiflora, besser bekannt unter dem Namen Montbretie, galt frÃ¼her als frostfrei zu Ã¼berwinternde
+KÃ¼belpflanze. Meine Pflanzen haben den Januar 2009 bei -14Â°C mit nur geringen SchÃ¤den im Garten frei 
+ausgepflanzt, aber sehr trocken gehalten, Ã¼berstanden. 
  </font></p></td>
 	<td width="329" height="200" bgcolor="#44aa00" valign="middle"> 
          <p align="left" style="margin-right: 10px;">
@@ -135,5 +135,5 @@ ausgepflanzt, aber sehr trocken gehalten, überstanden.
  
 
 
-</p><p><a href="index.html">zurück zur Startseite</a> <a href="Fotostartseiteneu.html">zurück zur Fotoübersicht</a>
+</p><p><a href="index.html">zurÃ¼ck zur Startseite</a> <a href="Fotostartseiteneu.html">zurÃ¼ck zur FotoÃ¼bersicht</a>
 </p></div></body></html>
