--- a/Cyclamen.html
+++ b/Cyclamen.html
@@ -40,9 +40,9 @@ td {vertical-align:center; overflow:hidden;}
 	<td width="230" height="200" bgcolor="#44aa00">
           <p align="left"><font size="3" face="Arial">
 Cyclamen hederifolium braucht lockeren humusreichen Kalkboden im
-Schatten. Dort vermehrt es sich sogar, wenn man es in Ruhe lässt und
-konkurrierende Wurzeln anderer Pflanzen fernhält. Die Samen werden von Ameisen
-verschleppt, so daß in weitem Umkreis Sämlinge wachsen. </font></p></td>
+Schatten. Dort vermehrt es sich sogar, wenn man es in Ruhe lÃ¤sst und
+konkurrierende Wurzeln anderer Pflanzen fernhÃ¤lt. Die Samen werden von Ameisen
+verschleppt, so daÃŸ in weitem Umkreis SÃ¤mlinge wachsen. </font></p></td>
 	      </tr>
          </tbody></table>
          
@@ -57,8 +57,8 @@ verschleppt, so daß in weitem Umkreis Sämlinge wachsen. </font></p></td>
 	<td width="230" height="200" bgcolor="#44aa00">
           <p align="left"><font size="3" face="Arial">
 Cyclamen hederifolium v. confusum von der griechischen Halbinsel Mani ist tetraploid.
-Eigentlich sehen die Blüten wie bei C. hederifolium aus, diese Pflanze öffnet die Blüte aber 
-gerade erst und klappt Blütenblätter noch um.
+Eigentlich sehen die BlÃ¼ten wie bei C. hederifolium aus, diese Pflanze Ã¶ffnet die BlÃ¼te aber 
+gerade erst und klappt BlÃ¼tenblÃ¤tter noch um.
  </font></p></td>
 	      </tr>
          </tbody></table>
@@ -66,8 +66,8 @@ gerade erst und klappt Blütenblätter noch um.
  <tbody><tr>
         <td width="344" height="200" bgcolor="#44aa00">
           <p align="center"><font size="3" face="Arial">
-		Cyclamen hederifolium in der weißen Form blüht ebenfalls im Herbst. Alle
-		Blüten auf diesem Bild stammen aus einer einzigen Knolle. 
+		Cyclamen hederifolium in der weiÃŸen Form blÃ¼ht ebenfalls im Herbst. Alle
+		BlÃ¼ten auf diesem Bild stammen aus einer einzigen Knolle. 
 		</font>
           </p></td>
 	<td width="156" height="200" bgcolor="#44aa00">
@@ -89,7 +89,7 @@ gerade erst und klappt Blütenblätter noch um.
 		</p></td>
 	<td width="230" height="200" bgcolor="#44aa00">
           <p align="left"><font size="3" face="Arial">
-Von Cyclamen hederifolium existieren eine Fülle von Sonderformen wie diese mit besonders dunklen Blüten.
+Von Cyclamen hederifolium existieren eine FÃ¼lle von Sonderformen wie diese mit besonders dunklen BlÃ¼ten.
  </font></p></td>
 	      </tr>
          </tbody></table>
@@ -101,9 +101,9 @@ Von Cyclamen hederifolium existieren eine Fülle von Sonderformen wie diese mit b
 		</p></td>
 	<td width="274" height="200" bgcolor="#44aa00" valign="middle">
           <p align="center" style="margin-right: 10px;"><font size="3" face="Arial">
-Cyclamen cyprium ist nicht ganz winterhart und etwas heikel. Ein Edelstein für das
-Alpinenhaus, das wegen Schimmelgefahr stets gut gelüftet sein muß. Am Naturstandort 
-in den Bergen Zyperns wächst es im Laubhumus an Bachufern, also sehr feucht, aber im Sommer 
+Cyclamen cyprium ist nicht ganz winterhart und etwas heikel. Ein Edelstein fÃ¼r das
+Alpinenhaus, das wegen Schimmelgefahr stets gut gelÃ¼ftet sein muÃŸ. Am Naturstandort 
+in den Bergen Zyperns wÃ¤chst es im Laubhumus an Bachufern, also sehr feucht, aber im Sommer 
 absolut trocken.
  </font></p></td>
 	
@@ -120,9 +120,9 @@ absolut trocken.
         <td width="256" height="200" bgcolor="#44aa00">
           <p align="center"><font size="3" face="Arial">
 Cyclamen cilicium kommt aus dem cilikischen Taurusgebirge in der
-Südtürkei und ist zwar winterhart aber so zart und klein, dass ich es
-lieber im Topf halte, wo es im September/Oktober zuverlaessig blüht,
-während es im Garten unter dem fallenden Laub versteckt wäre. </font></p></td>
+SÃ¼dtÃ¼rkei und ist zwar winterhart aber so zart und klein, dass ich es
+lieber im Topf halte, wo es im September/Oktober zuverlaessig blÃ¼ht,
+wÃ¤hrend es im Garten unter dem fallenden Laub versteckt wÃ¤re. </font></p></td>
 	<td width="337" height="254" bgcolor="#44aa00">
           <p align="center">
 		 <img src="Cyclamen-cilicium.JPG" width="322" height="180" align="middle">  
@@ -135,9 +135,9 @@ während es im Garten unter dem fallenden Laub versteckt wäre. </font></p></td>
           <p align="center"></p></td>
         <td width="256" height="200" bgcolor="#44aa00">
           <p align="center"><font size="3" face="Arial">
-Cyclamen intaminatum ähnelt C. cilicium sehr, zwar auch winterhart, aber noch etwas kleiner.
-Meistens sind die Blüten rosa, hier allerdings weiß. Die Heimat ist ein sehr kleines Gebiet 
-in der Nordwesttürkei. </font></p></td>
+Cyclamen intaminatum Ã¤hnelt C. cilicium sehr, zwar auch winterhart, aber noch etwas kleiner.
+Meistens sind die BlÃ¼ten rosa, hier allerdings weiÃŸ. Die Heimat ist ein sehr kleines Gebiet 
+in der NordwesttÃ¼rkei. </font></p></td>
 	<td width="337" height="254" bgcolor="#44aa00">
           <p align="center">
 		 <img src="Cyclamen-intaminatum.JPG" width="260" height="285" align="middle">  
@@ -155,7 +155,7 @@ in der Nordwesttürkei. </font></p></td>
 	<td width="359" height="200" bgcolor="#44aa00">
           <p align="center"><font size="3" face="Arial">
 Cyclamen libanoticum ist ein auch in der Natur sehr seltenes
-Alpenveilchen. Die stattlichen Blüten erscheinen im Januar, die Pflege
+Alpenveilchen. Die stattlichen BlÃ¼ten erscheinen im Januar, die Pflege
 ist allerdings schwierig. Unbedingt frostfrei im Kalthaus halten. </font></p></td>
         </tr>
 </tbody></table>
@@ -176,10 +176,10 @@ ist allerdings schwierig. Unbedingt frostfrei im Kalthaus halten. </font></p></t
 	<td width="177" height="200" bgcolor="#44aa00">
           <p align="center"><font size="2" face="Arial">
 Cyclamen balearicum (links) aus Mallorca und Cyclamen creticum
-(rechts)aus Kreta sind einander sehr ähnlich, die kretische Art
-manchmal etwas rosa getönt (forma pallide-roseum). Sie wachsen in der
-Natur an feucht-schattigen Stellen entlang von Bächen und blühen im
-Frühjahr. Die Blüte ist sehr schmal und zart gebaut. Nicht winterhart. </font></p></td>
+(rechts)aus Kreta sind einander sehr Ã¤hnlich, die kretische Art
+manchmal etwas rosa getÃ¶nt (forma pallide-roseum). Sie wachsen in der
+Natur an feucht-schattigen Stellen entlang von BÃ¤chen und blÃ¼hen im
+FrÃ¼hjahr. Die BlÃ¼te ist sehr schmal und zart gebaut. Nicht winterhart. </font></p></td>
         <td width="165" height="200" bgcolor="#44aa00">
           <p align="center">
 		<img src="Cyclamen-creticum.JPG" width="210" height="150" align="middle"> 
@@ -196,11 +196,11 @@ Frühjahr. Die Blüte ist sehr schmal und zart gebaut. Nicht winterhart. </font></
 <tbody><tr>
        	<td width="348" height="200" bgcolor="#44aa00">
           <p align="center"><font size="3" face="Arial">
-Cyclamen graecum  blüht im Herbst in Südgriechenland und an der Südküste
-der Türkei in Massen. Die Blüten ähneln denen von C. hederifolium, an
+Cyclamen graecum  blÃ¼ht im Herbst in SÃ¼dgriechenland und an der SÃ¼dkÃ¼ste
+der TÃ¼rkei in Massen. Die BlÃ¼ten Ã¤hneln denen von C. hederifolium, an
 den fleischigen Wurzeln kann man aber C. graecum sofort erkennen. An
-geschützter Stelle in der Nähe der Hauswand sind die Pflanzen (hier die Unterart anatolicum)
-seit über 15 Jahren winterhart und blühen jedes Jahr. </font></p></td>
+geschÃ¼tzter Stelle in der NÃ¤he der Hauswand sind die Pflanzen (hier die Unterart anatolicum)
+seit Ã¼ber 15 Jahren winterhart und blÃ¼hen jedes Jahr. </font></p></td>
 	<td width="152" height="200" bgcolor="#44aa00">
           <p align="center">
 		<img src="Cyclamen-graecum.JPG" width="152" height="200" align="middle"> 
@@ -218,11 +218,11 @@ seit über 15 Jahren winterhart und blühen jedes Jahr. </font></p></td>
 	<td width="219" height="200" bgcolor="#44aa00">
           <p align="center"><font size="2" face="Arial">
 Cyclamen persicum hier in einer weissen Form aus Zypern ist die
-Naturform aller gezüchteten Alpenveilchen, die etwas aus der Mode
-gekommen sind, da sie künstlich wirken und das Klima in unseren warmen
-Wohnzimmern nicht vertragen. Es übersteht überhaupt keinen Frost und ist
+Naturform aller gezÃ¼chteten Alpenveilchen, die etwas aus der Mode
+gekommen sind, da sie kÃ¼nstlich wirken und das Klima in unseren warmen
+Wohnzimmern nicht vertragen. Es Ã¼bersteht Ã¼berhaupt keinen Frost und ist
 im Kalthaus auf viel frische Luft angewiesen, da es andernfalls fault.
-Die sehr großen Blüten erscheinen im März, im Sommer halte ich es total
+Die sehr groÃŸen BlÃ¼ten erscheinen im MÃ¤rz, im Sommer halte ich es total
 trocken in einer Garagenecke. </font></p></td>
         </tr>
 </tbody></table>
@@ -236,10 +236,10 @@ trocken in einer Garagenecke. </font></p></td>
 		</p></td>
 	<td width="152" height="200" bgcolor="#44aa00">
           <p align="center"><font size="3" face="Arial">
-Cyclamen rohlfsianum mit ahornähnlichen Blättern und kleinen Blüten
-wächst in Lybien. Sehr seltene Kalthauspflanze . Die erste Blüte
-erschien bei mir 10 Jahre nach der Aussaat, weil ich es zwar trocken aber zu kühl über
-den Sommer gebracht habe. Seit es völlig trocken in der Sonne schmoren darf, blüht es
+Cyclamen rohlfsianum mit ahornÃ¤hnlichen BlÃ¤ttern und kleinen BlÃ¼ten
+wÃ¤chst in Lybien. Sehr seltene Kalthauspflanze . Die erste BlÃ¼te
+erschien bei mir 10 Jahre nach der Aussaat, weil ich es zwar trocken aber zu kÃ¼hl Ã¼ber
+den Sommer gebracht habe. Seit es vÃ¶llig trocken in der Sonne schmoren darf, blÃ¼ht es
 etwas reicher. </font></p></td>
 	 <td width="132" height="200" bgcolor="#44aa00">
           <p align="center">
@@ -265,12 +265,12 @@ etwas reicher. </font></p></td>
 	<td width="332" height="200" bgcolor="#44aa00">
           <p align="center"><font size="3" face="Arial">
 Cyclamen repandum ist in den milderen Gegenden Deutschlands winterhart
-und hält bei mir im Garten frei ausgepflanzt schon einige Jahre aus,
-wächst allerdings besser im Topf, den ich ins Kalthaus stelle. Die
-Blüten erscheinen von März bis Mai. Die Art ist in Italien weit
+und hÃ¤lt bei mir im Garten frei ausgepflanzt schon einige Jahre aus,
+wÃ¤chst allerdings besser im Topf, den ich ins Kalthaus stelle. Die
+BlÃ¼ten erscheinen von MÃ¤rz bis Mai. Die Art ist in Italien weit
 verbreitet, Unterarten gibt es auf der Peloponnes und auf Rhodos.Diese werden neuerdings 
-auch als separate Art C. rhodium ssp. peloponnesiacum bzw. ssp. vividum geführt.
-Die auffallend gefärbten Blüten stehen über schön silber gezeichnetem Laub.
+auch als separate Art C. rhodium ssp. peloponnesiacum bzw. ssp. vividum gefÃ¼hrt.
+Die auffallend gefÃ¤rbten BlÃ¼ten stehen Ã¼ber schÃ¶n silber gezeichnetem Laub.
 </font></p></td>
         </tr>
 </tbody></table>
@@ -278,12 +278,12 @@ Die auffallend gefärbten Blüten stehen über schön silber gezeichnetem Laub.
 <tbody><tr>
 	<td width="214" height="200" bgcolor="#44aa00">
           <p align="center"><font size="2" face="Arial">
-Cyclamen pseudoibericum ist in einem sehr kleinen Gebiet im Südosten
-der Türkei zu Hause. Zunächst hielt man es für eine Form von C.
-libanoticum oder eine Hybride, ehe es als eigenständige Art anerkannt
-wurde. Die im Frühjahr erscheinenden Blüten erinnern mit ihren
-Basalflecken an C. coum, sind aber mindestens doppelt so groß. An
-günstigen Stellen im Freiland hart. </font></p></td>
+Cyclamen pseudoibericum ist in einem sehr kleinen Gebiet im SÃ¼dosten
+der TÃ¼rkei zu Hause. ZunÃ¤chst hielt man es fÃ¼r eine Form von C.
+libanoticum oder eine Hybride, ehe es als eigenstÃ¤ndige Art anerkannt
+wurde. Die im FrÃ¼hjahr erscheinenden BlÃ¼ten erinnern mit ihren
+Basalflecken an C. coum, sind aber mindestens doppelt so groÃŸ. An
+gÃ¼nstigen Stellen im Freiland hart. </font></p></td>
         <td width="286" height="200" bgcolor="#44aa00">
           <p align="center">
 		<img src="Cyclamen-pseudoibericum.JPG" width="286" height="195" align="middle"> 
@@ -301,8 +301,8 @@ günstigen Stellen im Freiland hart. </font></p></td>
 	<td width="332" height="200" bgcolor="#44aa00">
           <p align="center"><font size="3" face="Arial">
 Cyclamen africanum aus Algerien und Tunesien ist von C. hederifolium kaum zu unterscheiden. Die beste Methode, beide
-Arten auseinanderzuhalten ist, sie im Garten zu überwintern. C. hederifolium überlebt, C. africanum 
-nicht. C. africanum lässt sich sehr gut im Topf halten und blüht im September/Oktober reich.
+Arten auseinanderzuhalten ist, sie im Garten zu Ã¼berwintern. C. hederifolium Ã¼berlebt, C. africanum 
+nicht. C. africanum lÃ¤sst sich sehr gut im Topf halten und blÃ¼ht im September/Oktober reich.
 </font></p></td>
         </tr>
 </tbody></table>
@@ -317,8 +317,8 @@ nicht. C. africanum lässt sich sehr gut im Topf halten und blüht im September/Ok
 <tbody><tr>
 	<td width="214" height="200" bgcolor="#44aa00">
           <p align="center"><font size="2" face="Arial">
-Cyclamen coum kommt in mehreren Unterarten und Farben von weiss bis rot aus der Türkei zu uns. Neben den Blüten verdienen 
-auch die oft schön silbrig gezeichneten Blätter Beachtung. Das Besondere ist die Blütezeit:Im 
+Cyclamen coum kommt in mehreren Unterarten und Farben von weiss bis rot aus der TÃ¼rkei zu uns. Neben den BlÃ¼ten verdienen 
+auch die oft schÃ¶n silbrig gezeichneten BlÃ¤tter Beachtung. Das Besondere ist die BlÃ¼tezeit:Im 
 Januar oder Februar schauen sie oft aus dem Schnee. </font></p></td>
         <td width="286" height="200" bgcolor="#44aa00">
           <p align="center">
@@ -338,8 +338,8 @@ Januar oder Februar schauen sie oft aus dem Schnee. </font></p></td>
 	<td width="332" height="200" bgcolor="#44aa00">
           <p align="center"><font size="3" face="Arial">
 Cyclamen purpurascens ist das einzige Alpenveilchen, das auch in Deutschland in 
-der Natur vorkommt (in den Alpen). Im Garten gehört es zu den schwierigeren Arten.Meine
-beiden Pflanzen kommen jedes Jahr im August tapfer wieder, blühen mäßig ,bleiben klein
+der Natur vorkommt (in den Alpen). Im Garten gehÃ¶rt es zu den schwierigeren Arten.Meine
+beiden Pflanzen kommen jedes Jahr im August tapfer wieder, blÃ¼hen mÃ¤ÃŸig ,bleiben klein
  und versamen sich nicht.
 </font></p></td>
         </tr>
@@ -348,9 +348,9 @@ beiden Pflanzen kommen jedes Jahr im August tapfer wieder, blühen mäßig ,bleiben
 <tbody><tr>
 	<td width="214" height="200" bgcolor="#44aa00">
           <p align="center"><font size="2" face="Arial">
-Cyclamen x perpuris Òdorella´ist eine ganz neue Kreuzung, die in Erfurt aus C. persicum
-und C. purpurascens gezüchtet wurde. Sie ist winterhart, leider steril (wird nur durch Gewebekultur
-vermehrt) und blüht von Juli bis Januar. Die Blüten duften stark. Immergrün. Diese Hybride ist aus mir nicht bekannten Gründen wieder aus dem Handel verschwunden.</font></p></td>
+Cyclamen x perpuris Ã’dorellaÂ´ist eine ganz neue Kreuzung, die in Erfurt aus C. persicum
+und C. purpurascens gezÃ¼chtet wurde. Sie ist winterhart, leider steril (wird nur durch Gewebekultur
+vermehrt) und blÃ¼ht von Juli bis Januar. Die BlÃ¼ten duften stark. ImmergrÃ¼n. Diese Hybride ist aus mir nicht bekannten GrÃ¼nden wieder aus dem Handel verschwunden.</font></p></td>
         <td width="286" height="200" bgcolor="#44aa00">
           <p align="center">
 		<img src="Cyclamen-odorella.JPG" width="300" height="201" align="middle"> 
@@ -358,5 +358,5 @@ vermehrt) und blüht von Juli bis Januar. Die Blüten duften stark. Immergrün. Die
         </tr>
 </tbody></table>
 
-</p><p><a href="index.html">zurück zur Startseite</a> <a href="Fotostartseiteneu.html">zurück zur Fotoübersicht</a>
+</p><p><a href="index.html">zurÃ¼ck zur Startseite</a> <a href="Fotostartseiteneu.html">zurÃ¼ck zur FotoÃ¼bersicht</a>
 </p></div></body></html>
