--- a/Fotostartseiteneu.html
+++ b/Fotostartseiteneu.html
@@ -13,13 +13,13 @@ td {vertical-align:center; overflow:hidden; }
 <body background="Background.jpg" text="#ffcc99" link="#ffcc99" vlink="#ffcc99" alink="#ffffff" leftmargin="30" topmargin="50" onload="makesnake()" style="width: 100%;">
 
 <div id="uebersicht" align="center">
-<p><a href="index.html"> zurück zur Startseite</a></p>
+<p><a href="index.html"> zurÃ¼ck zur Startseite</a></p>
 <table height="60" cellspacing="0" cellpadding="0">
       <tbody><tr>
         <td width="100%" bgcolor="#007700">
           <p align="center"><font size="4" face="Arial">
  		Hier geht es zu den Fotos!
-		Der Übersichtlichkeit halber gibt es mehrere Kategorien:
+		Der Ãœbersichtlichkeit halber gibt es mehrere Kategorien:
 		</font>
           </p></td>
         </tr>
@@ -31,7 +31,7 @@ td {vertical-align:center; overflow:hidden; }
       <tbody><tr>
         <td width="678" height="150" bgcolor="#00aa11">
           <p align="center"><font size="4" face="Arial"><a href="Fruehjahr.html">
-		Steingartenpflanzen für das Frühjahr</a>
+		Steingartenpflanzen fÃ¼r das FrÃ¼hjahr</a>
 		</font></p></td>
 	<td width="122" height="150" bgcolor="#00aa11">
           <p align="right">
@@ -44,7 +44,7 @@ td {vertical-align:center; overflow:hidden; }
 	<tbody><tr>
         <td width="678" height="150" bgcolor="#448800">
           <p align="center"><font size="4" face="Arial"><a href="Sommer.html">
-		Steingartenpflanzen für Sommer und Herbst</a>
+		Steingartenpflanzen fÃ¼r Sommer und Herbst</a>
 		</font></p></td>
 	<td width="122" height="150" bgcolor="#448800">
           <p align="right">
@@ -68,7 +68,7 @@ td {vertical-align:center; overflow:hidden; }
 	<tbody><tr>
 	 <td width="678" height="150" bgcolor="#007700">
           <p align="center"><font size="4" face="Arial"><a href="Schattenpflanzen.html">
-		Pflanzen für Schatten</a>
+		Pflanzen fÃ¼r Schatten</a>
 		</font></p></td>
 	<td width="122" height="150" bgcolor="#007700">
           <p align="right">
@@ -105,7 +105,7 @@ td {vertical-align:center; overflow:hidden; }
 	<tbody><tr>
         <td width="678" height="150" bgcolor="#337711">
           <p align="center"><font size="4" face="Arial"><a href="Kalthauspflanzen.html">
-		Pflanzen fürs Kalthaus</a>
+		Pflanzen fÃ¼rs Kalthaus</a>
 		</font></p></td>
 	<td width="122" height="150" bgcolor="#337711">
           <p align="right">
@@ -149,5 +149,5 @@ td {vertical-align:center; overflow:hidden; }
 		</p></td>
 	</tr>
 </tbody></table>
-</p><p><a href="index.html">zurück zur Startseite</a></p>
+</p><p><a href="index.html">zurÃ¼ck zur Startseite</a></p>
 </div></body></html>
