--- a/preisliste.html
+++ b/preisliste.html
@@ -5,16 +5,16 @@
 </head>
 
 <body bgcolor=#008800 text=#FFCC99 link=#88AA55 vlink=#440000 alink=#FFFFFF leftmargin=30 topmargin=50 onLoad="makesnake()" style="width:100%; overflow-x:hidden; overflow-y:scroll">
-<p align=right><a href="index.html">zurück zur Startseite</a></p>
+<p align=right><a href="index.html">zurÃ¼ck zur Startseite</a></p>
 <h1>Hier ist meine aktuelle Preisliste.</h1>
 <p> Letzte Aktualisierung am 15.3.2016. </p>
-<p>Als engagierter Hobbygärtner habe ich bei der Vermehrung für den eigenen Bedarf immer wieder Pflanzen übrig, die ich auf diesem Wege anderen Interessenten zugänglich machen möchte, zumal es sich oft um echte Raritäten handelt, die sonst nur unter Schwierigkeiten oder zu hohen Preisen zu bekommen sind. Natürlich habe ich nicht unbegrenzte Mengen von jeder Sorte und bitte deshalb um Verständnis, wenn ich das eine oder andere nicht liefern kann. Andererseits habe ich außerhalb dieser Liste noch etwa 800 andere Arten und Sorten (fast nur Steingartenpflanzen, so gut wie keine Prachtstauden), von denen ich einzelne Exemplare abgeben kann. Bitte rufen Sie mich (abends) an, wenn Sie irgend etwas suchen oder schicken Sie mir eine e- mail.
-Es handelt sich um kleine 1-2jährige Jungpflanzen im Topf oder mit Ballen, auf jeden Fall gut bewurzelt, aber meist kleiner als aus der Gärtnerei gewohnt. </p>
-<p> Im Hauptberuf bin ich übrigens Zahnarzt, verheiratat, 2 Kinder. Mein Garten liegt in Bonn, allerdings nicht im Rheintal, sondern in etwas weniger mildem Klima in 140m Höhe am Stadtrand.
+<p>Als engagierter HobbygÃ¤rtner habe ich bei der Vermehrung fÃ¼r den eigenen Bedarf immer wieder Pflanzen Ã¼brig, die ich auf diesem Wege anderen Interessenten zugÃ¤nglich machen mÃ¶chte, zumal es sich oft um echte RaritÃ¤ten handelt, die sonst nur unter Schwierigkeiten oder zu hohen Preisen zu bekommen sind. NatÃ¼rlich habe ich nicht unbegrenzte Mengen von jeder Sorte und bitte deshalb um VerstÃ¤ndnis, wenn ich das eine oder andere nicht liefern kann. Andererseits habe ich auÃŸerhalb dieser Liste noch etwa 800 andere Arten und Sorten (fast nur Steingartenpflanzen, so gut wie keine Prachtstauden), von denen ich einzelne Exemplare abgeben kann. Bitte rufen Sie mich (abends) an, wenn Sie irgend etwas suchen oder schicken Sie mir eine e- mail.
+Es handelt sich um kleine 1-2jÃ¤hrige Jungpflanzen im Topf oder mit Ballen, auf jeden Fall gut bewurzelt, aber meist kleiner als aus der GÃ¤rtnerei gewohnt. </p>
+<p> Im Hauptberuf bin ich Ã¼brigens Zahnarzt, verheiratat, 2 Kinder. Mein Garten liegt in Bonn, allerdings nicht im Rheintal, sondern in etwas weniger mildem Klima in 140m HÃ¶he am Stadtrand.
 </p>
 
-<p>Sie können die Preisliste <a href="preisliste.xls" >  hier</a>&nbsp;als EXCEL-Datei downloaden und ausdrucken oder das Formular online ausfüllen und abschicken(Leider geht dies nicht mehr, wenn sie Windows NT oder XP als Betriebssystem haben. In diesem Fall bitte e-mail schicken.
-Die Lieferung erfolgt per Postpaket. Leider sind nicht immer alle Pflanzen vorhanden. Die Portokosten werden in der tatsächlich angefallenen Höhe in Rechnung gestellt.</p>
+<p>Sie kÃ¶nnen die Preisliste <a href="preisliste.xls" >  hier</a>&nbsp;als EXCEL-Datei downloaden und ausdrucken oder das Formular online ausfÃ¼llen und abschicken(Leider geht dies nicht mehr, wenn sie Windows NT oder XP als Betriebssystem haben. In diesem Fall bitte e-mail schicken.
+Die Lieferung erfolgt per Postpaket. Leider sind nicht immer alle Pflanzen vorhanden. Die Portokosten werden in der tatsÃ¤chlich angefallenen HÃ¶he in Rechnung gestellt.</p>
    
 <form action="mailto:rohlfs.bonn@freenet.de" method="post" enctype="text/plain">
 <table>
@@ -31,10 +31,10 @@ Die Lieferung erfolgt per Postpaket. Leider sind nicht immer alle Pflanzen vorha
   <td>e-Mailadresse</td><td><input name="e-Mailadresse" size=60 maxlength=60></td>
 </tr>
 <tr> 
-  <td>gewünschter Liefertermin</td><td><input name="Liefertermin" size=60 maxlength=60></td>
+  <td>gewÃ¼nschter Liefertermin</td><td><input name="Liefertermin" size=60 maxlength=60></td>
 </tr>
 <tr> 
-<td valign=top>Besondere Wünsche</td><td><textarea name="Sonderwunsch" rows=5 cols=60 wrap=physical></textarea></td>
+<td valign=top>Besondere WÃ¼nsche</td><td><textarea name="Sonderwunsch" rows=5 cols=60 wrap=physical></textarea></td>
 </tr> 
 </table>  
 <br>
@@ -47,6 +47,6 @@ Die Lieferung erfolgt per Postpaket. Leider sind nicht immer alle Pflanzen vorha
   <input type=submit value="Absenden">
   <input type=reset value="Abbrechen">
 </form>
-<p><a href="index.html">zurück zur Startseite</a></p>
+<p><a href="index.html">zurÃ¼ck zur Startseite</a></p>
 </body>
 </html>
