--- a/Fotostartseiteneu.html
+++ b/Fotostartseiteneu.html
@@ -139,7 +139,7 @@ td {vertical-align:center; overflow:hidden; }
 <table border="0" height="150" cellspacing="0" cellpadding="0" style="table-layout: fixed;">
 	<tbody><tr>
 	 <td width="678" height="150" bgcolor="#00aa11">
-          <p align="center"><font size="4" face="Arial"><a href="AnderePflanzen.HTML">
+          <p align="center"><font size="4" face="Arial"><a href="andere_pflanzen.html">
 		andere Pflanzen</a>
 		</font></p></td>
 	<td width="122" height="150" bgcolor="#00aa11">
